--- a/data/cards/yugipedia921232.yaml
+++ b/data/cards/yugipedia921232.yaml
@@ -27,7 +27,7 @@ text:
   zh-TW:
   zh-CN:
 card_type: Monster
-monster_type_line: Warrior / Xyz / Effect
+monster_type_line: Spellcaster / Xyz / Effect
 attribute: LIGHT
 rank: 4
 atk: 2500
