--- a/data/rush/16678.yaml
+++ b/data/rush/16678.yaml
@@ -1,6 +1,6 @@
 konami_id: 16678
 name:
-  en: Kachisuzaku the Unequaled
+  en: Karchizark the Unequaled
   de:
   es:
   fr:
@@ -28,7 +28,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    This card gains 1000 ATK until the end of this turn. Then, if you sent a Warrior or Winged Beast Type monster to the Graveyard by this effect's requirement, you can add 1 Level 6 or lower Normal Monster from your Graveyard to your hand.
+    This card gains 1000 ATK until the end of this turn. Then, if you sent a Warrior or Winged Beast Type monster to the Graveyard to meet the requirement, you can add 1 Level 6 or lower Normal Monster from your Graveyard to your hand.
   de:
   es:
   fr:
@@ -48,7 +48,7 @@ atk: 2100
 def: 2100
 images:
 - index: 1
-  image: KachisuzakutheUnequaled-RDKP06-JP-R.png
+  image: KarchizarktheUnequaled-RDKP06-JP-R.png
 sets:
   ja:
   - set_number: RD/KP06-JP021
