--- a/data/rush/16781.yaml
+++ b/data/rush/16781.yaml
@@ -1,6 +1,6 @@
 konami_id: 16781
 name:
-  en: Bowing of the Graying Gauze Guild
+  en: Bowing Brotherhood
   de:
   es:
   fr:
@@ -44,7 +44,7 @@ card_type: Trap
 property: Normal
 images:
 - index: 1
-  image: BowingoftheGrayingGauzeGuild-RDSBD3-JP-C.png
+  image: BowingBrotherhood-RDSBD3-JP-C.png
 sets:
   ja:
   - set_number: RD/SBD3-JP027
