--- a/data/rush/16982.yaml
+++ b/data/rush/16982.yaml
@@ -1,6 +1,6 @@
 konami_id: 16982
 name:
-  en: Pierce-Enforcing Brave
+  en: Piercing Samurai
   de:
   es:
   fr:
@@ -48,7 +48,7 @@ atk: 1200
 def: 1000
 images:
 - index: 1
-  image: PierceEnforcingBrave-RDKP07-JP-R.png
+  image: PiercingSamurai-RDKP07-JP-R.png
 sets:
   ja:
   - set_number: RD/KP07-JP016
