--- a/data/rush/16983.yaml
+++ b/data/rush/16983.yaml
@@ -1,6 +1,6 @@
 konami_id: 16983
 name:
-  en: Kimeluna the Lunar Dark Decider
+  en: Kimeluna the Dark Shifter
   de:
   es:
   fr:
@@ -50,9 +50,9 @@ series:
 - Fiendish Commander
 images:
 - index: 1
-  image: KimelunatheLunarDarkDecider-RDKP07-JP-SR.png
+  image: KimelunatheDarkShifter-RDKP07-JP-SR.png
 - index: 2
-  image: KimelunatheLunarDarkDecider-RDBD05-JP-UPR.png
+  image: KimelunatheDarkShifter-RDBD05-JP-UPR.png
 sets:
   ja:
   - set_number: RD/KP07-JP017
