--- a/data/rush/17009.yaml
+++ b/data/rush/17009.yaml
@@ -1,6 +1,6 @@
 konami_id: 17009
 name:
-  en: Aegis of the Five Houses
+  en: Five Types of Assistance
   de:
   es:
   fr:
@@ -44,7 +44,7 @@ card_type: Spell
 property: Normal
 images:
 - index: 1
-  image: AegisoftheFiveHouses-RDKP07-JP-R.png
+  image: FiveTypesofAssistance-RDKP07-JP-R.png
 sets:
   ja:
   - set_number: RD/KP07-JP043
