--- a/rush.yaml
+++ b/rush.yaml
@@ -36590,7 +36590,7 @@ yugipedia_page_id: 816274
 ---
 konami_id: 16678
 name:
-  en: Kachisuzaku the Unequaled
+  en: Karchizark the Unequaled
   de:
   es:
   fr:
@@ -36618,7 +36618,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    This card gains 1000 ATK until the end of this turn. Then, if you sent a Warrior or Winged Beast Type monster to the Graveyard by this effect's requirement, you can add 1 Level 6 or lower Normal Monster from your Graveyard to your hand.
+    This card gains 1000 ATK until the end of this turn. Then, if you sent a Warrior or Winged Beast Type monster to the Graveyard to meet the requirement, you can add 1 Level 6 or lower Normal Monster from your Graveyard to your hand.
   de:
   es:
   fr:
@@ -36638,7 +36638,7 @@ atk: 2100
 def: 2100
 images:
 - index: 1
-  image: KachisuzakutheUnequaled-RDKP06-JP-R.png
+  image: KarchizarktheUnequaled-RDKP06-JP-R.png
 sets:
   ja:
   - set_number: RD/KP06-JP021
@@ -40850,7 +40850,7 @@ yugipedia_page_id: 824771
 ---
 konami_id: 16781
 name:
-  en: Bowing of the Graying Gauze Guild
+  en: Bowing Brotherhood
   de:
   es:
   fr:
@@ -40894,7 +40894,7 @@ card_type: Trap
 property: Normal
 images:
 - index: 1
-  image: BowingoftheGrayingGauzeGuild-RDSBD3-JP-C.png
+  image: BowingBrotherhood-RDSBD3-JP-C.png
 sets:
   ja:
   - set_number: RD/SBD3-JP027
@@ -47243,7 +47243,7 @@ yugipedia_page_id: 834760
 ---
 konami_id: 16982
 name:
-  en: Pierce-Enforcing Brave
+  en: Piercing Samurai
   de:
   es:
   fr:
@@ -47291,7 +47291,7 @@ atk: 1200
 def: 1000
 images:
 - index: 1
-  image: PierceEnforcingBrave-RDKP07-JP-R.png
+  image: PiercingSamurai-RDKP07-JP-R.png
 sets:
   ja:
   - set_number: RD/KP07-JP016
@@ -47307,7 +47307,7 @@ yugipedia_page_id: 834162
 ---
 konami_id: 16983
 name:
-  en: Kimeluna the Lunar Dark Decider
+  en: Kimeluna the Dark Shifter
   de:
   es:
   fr:
@@ -47357,9 +47357,9 @@ series:
 - Fiendish Commander
 images:
 - index: 1
-  image: KimelunatheLunarDarkDecider-RDKP07-JP-SR.png
+  image: KimelunatheDarkShifter-RDKP07-JP-SR.png
 - index: 2
-  image: KimelunatheLunarDarkDecider-RDBD05-JP-UPR.png
+  image: KimelunatheDarkShifter-RDBD05-JP-UPR.png
 sets:
   ja:
   - set_number: RD/KP07-JP017
@@ -49158,7 +49158,7 @@ yugipedia_page_id: 835664
 ---
 konami_id: 17009
 name:
-  en: Aegis of the Five Houses
+  en: Five Types of Assistance
   de:
   es:
   fr:
@@ -49202,7 +49202,7 @@ card_type: Spell
 property: Normal
 images:
 - index: 1
-  image: AegisoftheFiveHouses-RDKP07-JP-R.png
+  image: FiveTypesofAssistance-RDKP07-JP-R.png
 sets:
   ja:
   - set_number: RD/KP07-JP043
@@ -50991,7 +50991,7 @@ atk: 2500
 def: 3000
 materials:
   en: |-
-    "Kimeluna the Lunar Dark Decider" + "Valkyrian Sewkyrie"
+    "Kimeluna the Dark Shifter" + "Valkyrian Sewkyrie"
   de:
   es:
   fr:
