--- a/data/cards/48144509.yaml
+++ b/data/cards/48144509.yaml
@@ -12,7 +12,7 @@ name:
   ko: 오드아이즈 퓨전
   ko_rr:
   zh-TW:
-  zh-CN: 异色眼融合
+  zh-CN: 异色眼结合
 text:
   en: |-
     Fusion Summon 1 Dragon Fusion Monster from your Extra Deck, using monsters from your hand or field as Fusion Materials. If your opponent controls 2 or more monsters and you control no monsters, you can also use up to 2 "Odd-Eyes" monsters in your Extra Deck as Fusion Materials. You can only activate 1 "Odd-Eyes Fusion" per turn.
@@ -32,7 +32,7 @@ text:
     "오드아이즈 퓨전"은 1턴에 1장밖에 발동할 수 없다. ①: 자신의 패 / 필드에서, 드래곤족의 융합 몬스터 카드에 기재된 융합 소재 몬스터를 묘지로 보내고, 그 융합 몬스터 1장을 엑스트라 덱에서 융합 소환한다. 상대 필드에 몬스터가 2장 이상 존재하고, 자신 필드에 몬스터가 존재하지 않을 경우, 자신의 엑스트라 덱의 "오드아이즈" 몬스터도 2장까지 융합 소재로 할 수 있다.
   zh-TW:
   zh-CN: |-
-    「异色眼融合」在1回合只能发动1张。①：从自己的手卡·场上把龙族的融合怪兽卡决定的融合素材怪兽送去墓地，把那1只融合怪兽从额外卡组融合召唤。对方场上有怪兽2只以上存在，自己场上没有怪兽存在的场合，自己的额外卡组的「异色眼」怪兽也能有最多2只作为融合素材。
+    此卡名的卡1回合仅可发动1张。①：从自己的手牌・场上，将由龙族融合怪兽卡决定的融合素材怪兽送至墓地，将该1只融合怪兽从额外牌组融合召唤。对手场上有2只以上怪兽存在，自己场上不存在怪兽的情况下，也可将自己额外牌组的最多2只"异色眼"怪兽作为融合素材。
 card_type: Spell
 property: Normal
 series:
@@ -139,6 +139,11 @@ sets:
     rarities:
     - Super Rare
     - Secret Rare
+  zh-CN:
+  - set_number: SD29-SC028
+    set_name: 'Structure Deck: Master of Pendulum'
+    rarities:
+    - Common
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
