--- a/data/cards/54484652.yaml
+++ b/data/cards/54484652.yaml
@@ -12,7 +12,7 @@ name:
   ko: 초전사 카오스 솔저
   ko_rr:
   zh-TW:
-  zh-CN: 超战士 混沌战士
+  zh-CN: 超战士 混沌士兵
 text:
   en: |-
     You can Ritual Summon this card with "Super Soldier Ritual". If this card destroys an opponent's monster by battle and sends it to the Graveyard: Inflict damage to your opponent equal to its ATK in the Graveyard. If this card is destroyed by battle and sent to the Graveyard, or if this card in your possession is destroyed by an opponent's card effect and sent to your Graveyard: You can Special Summon 1 "Gaia The Fierce Knight" monster from your hand, Deck, or Graveyard. You can only Special Summon "Black Luster Soldier - Super Soldier(s)" once per turn.
@@ -32,7 +32,7 @@ text:
     "초전사의 의식"에 의해 의식 소환. 자신은 "초전사 카오스 솔저"를 1턴에 1번밖에 특수 소환할 수 없다. ①: 이 카드가 전투로 상대 몬스터를 파괴하고 묘지로 보냈을 경우에 발동할 수 있다. 그 몬스터의 원래의 공격력 만큼의 데미지를 상대에게 준다. ②: 이 카드가 전투 또는 상대의 효과로 파괴되어 묘지로 보내졌을 경우에 발동할 수 있다. 자신의 패 / 덱 / 묘지에서 "암흑 기사 가이아" 몬스터 1장을 고르고 특수 소환한다.
   zh-TW:
   zh-CN: |-
-    「超战士的仪式」降临。自己对「超战士 混沌战士」1回合只能有1次特殊召唤。①：这张卡战斗破坏对方怪兽送去墓地的场合发动。给与对方那只怪兽的原本攻击力数值的伤害。②：这张卡被战斗或者对方的效果破坏送去墓地的场合才能发动。从自己的手卡·卡组·墓地选1只「暗黑骑士 盖亚」怪兽特殊召唤。
+    以"超战士的仪式"降临。自己1回合仅可特殊召唤1次"超战士 混沌士兵"。①：此卡战斗破坏对手怪兽并将其送至墓地的情况下发动。给予对手该怪兽的原本攻击力数值的伤害。②：此卡因战斗或对手的效果被破坏并被送至墓地的情况下可以发动。从自己的手牌・牌组・墓地挑选1只"暗黑骑士盖亚"怪兽特殊召唤。
 card_type: Monster
 monster_type_line: Warrior / Ritual / Effect
 attribute: EARTH
@@ -111,6 +111,11 @@ sets:
     - Ultra Rare
     - Secret Rare
     - Ultimate Rare
+  zh-CN:
+  - set_number: CL03-SC010
+    set_name: Classic Pack 03
+    rarities:
+    - Common
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
