--- a/rush.yaml
+++ b/rush.yaml
@@ -86686,3 +86686,56 @@ sets:
     set_name: Legend Awakening Pack
     rarities:
 yugipedia_page_id: 921329
+---
+konami_id:
+name:
+  en: Cracking Claw
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: クラッキング・クロウ
+  ja_romaji: Kurakkingu Kurou
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    Equip this card to 1 face-up Dragon Type monster on your field.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    The equipped monster gains ATK equal to [the number of face-up Dragon Type monsters on the field] x 200. When the equipped monster attacks a Level 7 or higher Defense Position monster, inflict piercing battle damage (if the ATK of the attacking monster exceeds the DEF of the attack target, inflict the difference).
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Spell
+property: Equip
+series:
+- High Tech Dragon
+images:
+- index: 1
+  image: CrackingClaw-RDKP12-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/KP12-JP043
+    set_name: 'Deck Mod Pack: Double Star of the Assault!!'
+    rarities:
+    - Common
+yugipedia_page_id: 922308
