--- a/data/cards/24701066.yaml
+++ b/data/cards/24701066.yaml
@@ -117,6 +117,10 @@ sets:
     set_name: 'Deck Build Pack: Infinity Chasers'
     rarities:
     - Super Rare
+  - set_number: 23TP-JP111
+    set_name: Tournament Pack 2023 Vol.1
+    rarities:
+    - Common
   ko:
   - set_number: DBIC-KR007
     set_name: 'Deck Build Pack: Infinity Chasers'
