--- a/data/cards/16889337.yaml
+++ b/data/cards/16889337.yaml
@@ -77,6 +77,10 @@ sets:
     set_name: Advanced Tournament Pack 2016 Vol.2
     rarities:
     - Normal Parallel Rare
+  - set_number: 23TP-JP104
+    set_name: Tournament Pack 2023 Vol.1
+    rarities:
+    - Common
   ko:
   - set_number: SHSP-KR035
     set_name: Shadow Specters
