--- a/data/cards/18205590.yaml
+++ b/data/cards/18205590.yaml
@@ -92,6 +92,10 @@ sets:
     set_name: Duelist Alliance
     rarities:
     - Rare
+  - set_number: 23TP-JP114
+    set_name: Tournament Pack 2023 Vol.1
+    rarities:
+    - Common
   ko:
   - set_number: DUEA-KR058
     set_name: Duelist Alliance
