--- a/data/rush/16767.yaml
+++ b/data/rush/16767.yaml
@@ -67,4 +67,8 @@ sets:
     rarities:
     - Super Parallel Rare
     - Secret Rare
+  - set_number: RD/KRCS-KR001
+    set_name: Rush Duel Korea Championship 2022 Regional Qualifiers promotional card
+    rarities:
+    - Secret Rare
 yugipedia_page_id: 824703
