--- a/data/cards/46136942.yaml
+++ b/data/cards/46136942.yaml
@@ -12,7 +12,7 @@ name:
   ko: <ruby>EM<rt>엔터메이트</rt></ruby> 오드아이즈 디졸버
   ko_rr:
   zh-TW:
-  zh-CN: 娱乐伙伴 异色眼融解者
+  zh-CN: 娱乐伙伴 异色眼溶解者
 text:
   en: |-
     At the start of the Damage Step, if your Pendulum Monster battles an opponent's monster: You can Special Summon this card from your hand, and if you do, your monster cannot be destroyed by that battle. You can only use this effect of "Performapal Odd-Eyes Dissolver" once per turn. During your Main Phase: You can Fusion Summon 1 Fusion Monster from your Extra Deck, using monsters from your hand, field, and/or Pendulum Zones, including this card.
@@ -32,7 +32,7 @@ text:
     이 카드명의 ①의 몬스터 효과는 1턴에 1번밖에 사용할 수 없다. ① : 자신의 펜듈럼 몬스터가 상대 몬스터와 전투를 실행하는 데미지 스텝 개시시에 발동할 수 있다. 이 카드를 패에서 특수 소환하고, 그 자신의 몬스터는 그 전투로는 파괴되지 않는다. ② : 자신 메인 페이즈에 발동할 수 있다. 융합 몬스터 카드에 기재된, 이 카드를 포함한 융합 소재 몬스터를 자신 필드에서 묘지로 보내고, 그 융합 몬스터 1장을 엑스트라 덱에서 융합 소환한다. 그 때, 자신의 펜듈럼 존에 존재하는 융합 소재 몬스터도 융합 소재로 사용할 수 있다.
   zh-TW:
   zh-CN: |-
-    这个卡名的①的怪兽效果1回合只能使用1次。①：自己的灵摆怪兽和对方怪兽进行战斗的伤害步骤开始时才能发动。这张卡从手卡特殊召唤，那只自己怪兽不会被那次战斗破坏。②：自己主要阶段才能发动。融合怪兽卡决定的包含这张卡的融合素材怪兽从自己场上送去墓地，把那1只融合怪兽从额外卡组融合召唤。那个时候，自己的灵摆区域存在的融合素材怪兽也能作为融合素材使用。
+    此卡名的①怪兽效果1回合仅可使用1次。①：自己的灵摆怪兽与对手怪兽进行战斗的伤害步骤开始时可以发动。将此卡从手牌特殊召唤，该自己的怪兽不会因该战斗被破坏。②：在自己的主要阶段可以发动。将由融合怪兽卡决定的、包含此卡在内的融合素材怪兽从自己场上送至墓地，将该1只融合怪兽从额外牌组融合召唤。在此之际，存在于自己的灵摆区域的融合素材怪兽也可作为融合素材使用。
 card_type: Monster
 monster_type_line: Spellcaster / Pendulum / Effect
 attribute: DARK
@@ -59,7 +59,7 @@ pendulum_effect:
     ① : 1턴에 1번, 자신 메인 페이즈에 발동할 수 있다. 자신의 패 / 필드에서, 드래곤족 융합 몬스터 카드에 기재된 융합 소재 몬스터를 묘지로 보내고, 그 융합 몬스터 1장을 엑스트라 덱에서 융합 소환한다.
   zh-TW:
   zh-CN: |-
-    ①：1回合1次，自己主要阶段才能发动。从自己的手卡·场上把龙族融合怪兽卡决定的融合素材怪兽送去墓地，把那1只融合怪兽从额外卡组融合召唤。
+    ①：1回合1次，在自己的主要阶段可以发动。从自己的手牌・场上，将由龙族融合怪兽卡决定的融合素材怪兽送至墓地，将该1只融合怪兽从额外牌组融合召唤。
 series:
 - Odd-Eyes
 - Performapal
@@ -120,6 +120,11 @@ sets:
   ko:
   - set_number: CP17-KR003
     set_name: Collectors Pack 2017
+    rarities:
+    - Common
+  zh-CN:
+  - set_number: SD29-SC015
+    set_name: 'Structure Deck: Master of Pendulum'
     rarities:
     - Common
 limit_regulation:
