--- a/data/cards/05405694.yaml
+++ b/data/cards/05405694.yaml
@@ -12,7 +12,7 @@ name:
   ko: 카오스 솔저
   ko_rr: Kaoseu Soljeo
   zh-TW:
-  zh-CN: 混沌战士
+  zh-CN: 混沌士兵
 text:
   en: |-
     You can Ritual Summon this card with "Black Luster Ritual".
@@ -32,7 +32,7 @@ text:
     "카오스의 의식"에 의해 의식 소환.
   zh-TW:
   zh-CN: |-
-    「混沌的仪式」降临。
+    以"混沌的仪式"降临。
 card_type: Monster
 monster_type_line: Warrior / Ritual
 attribute: EARTH
@@ -254,6 +254,11 @@ sets:
     set_name: Prismatic Secret Rare "Black Luster Soldier" GET Campaign
     rarities:
     - Prismatic Secret Rare
+  zh-CN:
+  - set_number: CL03-SC009
+    set_name: Classic Pack 03
+    rarities:
+    - Secret Rare
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
