--- a/data/rush/17711.yaml
+++ b/data/rush/17711.yaml
@@ -1,6 +1,6 @@
 konami_id: 17711
 name:
-  en: Gradually Approaching Footsteps
+  en: I Hear Footsteps
   de:
   es:
   fr:
@@ -46,7 +46,7 @@ series:
 - Ghost Story
 images:
 - index: 1
-  image: GraduallyApproachingFootsteps-RDMRP1-JP-C.png
+  image: IHearFootsteps-RDMRP1-JP-C.png
 sets:
   ja:
   - set_number: RD/MRP1-JP085
