--- a/data/rush/17713.yaml
+++ b/data/rush/17713.yaml
@@ -1,6 +1,6 @@
 konami_id: 17713
 name:
-  en: Terror Phone Number
+  en: Terrorphone Number
   de:
   es:
   fr:
@@ -46,7 +46,7 @@ series:
 - Ghost Story
 images:
 - index: 1
-  image: TerrorPhoneNumber-RDMRP1-JP-C.png
+  image: TerrorphoneNumber-RDMRP1-JP-C.png
 sets:
   ja:
   - set_number: RD/MRP1-JP087
