--- a/data/rush/17703.yaml
+++ b/data/rush/17703.yaml
@@ -1,6 +1,6 @@
 konami_id: 17703
 name:
-  en: The Doll of Dread
+  en: Doll of Dread
   de:
   es:
   fr:
@@ -36,7 +36,7 @@ series:
 - Ghost Story
 images:
 - index: 1
-  image: TheDollofDread-RDMRP1-JP-C.png
+  image: DollofDread-RDMRP1-JP-C.png
 sets:
   ja:
   - set_number: RD/MRP1-JP077
