--- a/rush.yaml
+++ b/rush.yaml
@@ -67184,7 +67184,7 @@ yugipedia_page_id: 881683
 ---
 konami_id: 17703
 name:
-  en: The Doll of Dread
+  en: Doll of Dread
   de:
   es:
   fr:
@@ -67220,7 +67220,7 @@ series:
 - Ghost Story
 images:
 - index: 1
-  image: TheDollofDread-RDMRP1-JP-C.png
+  image: DollofDread-RDMRP1-JP-C.png
 sets:
   ja:
   - set_number: RD/MRP1-JP077
@@ -67652,7 +67652,7 @@ yugipedia_page_id: 880874
 ---
 konami_id: 17711
 name:
-  en: Gradually Approaching Footsteps
+  en: I Hear Footsteps
   de:
   es:
   fr:
@@ -67698,7 +67698,7 @@ series:
 - Ghost Story
 images:
 - index: 1
-  image: GraduallyApproachingFootsteps-RDMRP1-JP-C.png
+  image: IHearFootsteps-RDMRP1-JP-C.png
 sets:
   ja:
   - set_number: RD/MRP1-JP085
@@ -67776,7 +67776,7 @@ yugipedia_page_id: 881644
 ---
 konami_id: 17713
 name:
-  en: Terror Phone Number
+  en: Terrorphone Number
   de:
   es:
   fr:
@@ -67822,7 +67822,7 @@ series:
 - Ghost Story
 images:
 - index: 1
-  image: TerrorPhoneNumber-RDMRP1-JP-C.png
+  image: TerrorphoneNumber-RDMRP1-JP-C.png
 sets:
   ja:
   - set_number: RD/MRP1-JP087
@@ -86743,3 +86743,56 @@ sets:
     rarities:
     - Common
 yugipedia_page_id: 922308
+---
+konami_id:
+name:
+  en: Voidvelgr Phalanx
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: ヴォイドヴェルグ・ファランクス
+  ja_romaji: Voidoverugu Farankusu
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    Equip this card to 1 face-up Galaxy Type monster on your field.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    The equipped monster gains 200 ATK/DEF. If the equipped monster is DARK Attribute, it cannot be destroyed by your opponent's Trap Card effects, and if it attacks a Defense Position monster, inflict piercing battle damage (if the ATK of the attacking monster exceeds the DEF of the attack target, inflict the difference).
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Spell
+property: Equip
+series:
+- Voidvelgr
+images:
+- index: 1
+  image: VoidvelgrPhalanx-RDKP12-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/KP12-JP044
+    set_name: 'Deck Mod Pack: Double Star of the Assault!!'
+    rarities:
+    - Common
+yugipedia_page_id: 922641
