--- a/data/series/list.yaml
+++ b/data/series/list.yaml
@@ -19,7 +19,7 @@
   ja: <ruby>Ｓ－Ｆｏｒｃｅ<rt>セキュリティ・フォース</rt></ruby>
   ja_romaji: Sekyuriti Fōsu
   ko: <ruby>S－Force<rt>시큐리티 포스</rt></ruby>
-  ko_rr: Sikyuriti Poseu Beuritjihedeu
+  ko_rr: Sikyuriti Poseu
   zh-TW:
   zh-CN: 超元特防队
 - en: Machine Angel
