--- a/data/cards/55144522.yaml
+++ b/data/cards/55144522.yaml
@@ -32,7 +32,7 @@ text:
     ①: 자신은 덱에서 2장 드로우한다.
   zh-TW:
   zh-CN: |-
-    从卡组抽2张卡。
+    ①：自己从牌组抽２张。
 card_type: Spell
 property: Normal
 series:
@@ -426,6 +426,11 @@ sets:
     set_name: 'Memories of the Duel King: Battle City Arc'
     rarities:
     - Ultra Rare
+  zh-CN:
+  - set_number: TBC1-SCS01
+    set_name: Pot Collection
+    rarities:
+    - Quarter Century Secret Rare
 limit_regulation:
   tcg: Forbidden
   ocg: Forbidden
