--- a/data/cards/77189532.yaml
+++ b/data/cards/77189532.yaml
@@ -1,5 +1,5 @@
-konami_id:
-password:
+konami_id: 18430
+password: 77189532
 name:
   en: Rokket Coder
   de:
@@ -21,7 +21,8 @@ text:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    このカード名の①③の効果はそれぞれ１ターンに１度しか使用できない。①：自分フィールドのサイバース族モンスターを「コード・トーカー」モンスターのリンク素材とする場合、手札のこのカードもリンク素材にできる。②：このカードを「ヴァレル」モンスターのリンク召喚に使用する場合、このカードの種族をドラゴン族として扱う。③：自分フィールドのこのカードを「ヴァレル」モンスターのリンク素材とする場合、手札の闇属性モンスターも１体までリンク素材にできる。
   ko:
   zh-TW:
   zh-CN:
@@ -35,7 +36,7 @@ series:
 - Rokket
 images:
 - index: 1
-  image: RokketCoder-SUB1-JP-OP.png
+  image: RokketCoder-SUB1-JP-SR.png
 sets:
   ja:
   - set_number: SUB1-JP006
@@ -45,5 +46,5 @@ sets:
     - Secret Rare
 limit_regulation:
   tcg: Not yet released
-  ocg: Not yet released
+  ocg: Unlimited
 yugipedia_page_id: 911464
