--- a/data/cards/01516510.yaml
+++ b/data/cards/01516510.yaml
@@ -12,7 +12,7 @@ name:
   ko: 룬아이즈 펜듈럼 드래곤
   ko_rr: Run-aijeu Pendyulleom Deuraegon
   zh-TW:
-  zh-CN: 秘术眼灵摆龙
+  zh-CN: 卢恩眼灵摆龙
 text:
   en: |-
     "Odd-Eyes Pendulum Dragon" + 1 Spellcaster-Type monster
@@ -52,8 +52,8 @@ text:
     ① : 이 카드는 "오드아이즈 펜듈럼 드래곤" 이외의 융합 소재로 한 몬스터의 원래 레벨에 따라 이하의 효과를 얻는다. ●레벨 4 이하 : 이 카드는 1번의 배틀 페이즈 중에 2회까지 몬스터에 공격할 수 있다. ●레벨 5 이상 : 이 카드는 1번의 배틀 페이즈 중에 3회까지 몬스터를 공격할 수 있다. ② : 필드의 펜듈럼 소환된 몬스터를 소재로 하여 이 카드가 융합 소환에 성공한 턴에, 이 카드는 상대의 효과를 받지 않는다.
   zh-TW:
   zh-CN: |-
-    「异色眼灵摆龙」＋魔法师族怪兽
-    ①：这张卡得到「异色眼灵摆龙」以外的作为融合素材的怪兽的原本等级的以下效果。●4星以下：这张卡在同1次的战斗阶段中最多2次可以向怪兽攻击。●5星以上：这张卡在同1次的战斗阶段中最多3次可以向怪兽攻击。②：场上的灵摆召唤的怪兽作为素材让这张卡融合召唤成功的回合，这张卡不受对方的效果影响。
+    "异色眼灵摆龙"＋魔法师族怪兽
+    ①：此卡根据"异色眼灵摆龙"以外的融合素材的怪兽的原本等级，获得以下效果。●等级4以下：此卡在1次战斗阶段中最多可攻击怪兽2次。●等级5以上：此卡在1次战斗阶段中最多可攻击怪兽3次。②：此卡将场上被灵摆召唤的怪兽作为素材融合召唤成功的回合，此卡不受对手效果的影响。
 card_type: Monster
 monster_type_line: Dragon / Fusion / Effect
 attribute: DARK
@@ -174,6 +174,11 @@ sets:
     - Ultra Rare
     - Secret Rare
     - Holographic Rare
+  zh-CN:
+  - set_number: SD29-SCP01
+    set_name: 'Structure Deck: Master of Pendulum Deck Enhancement Pack'
+    rarities:
+    - Secret Rare
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
