--- a/data/cards/04606229.yaml
+++ b/data/cards/04606229.yaml
@@ -1,5 +1,5 @@
-konami_id:
-password:
+konami_id: 18428
+password: 4606229
 name:
   en: Last Hope Numbers
   de:
@@ -22,7 +22,8 @@ text:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    このカード名はルール上「ギャラクシーアイズ」カードとしても扱う。このカード名のカードは１ターンに１枚しか発動できない。①：ＬＰを半分払い、自分の墓地のモンスター２体を対象として発動できる。そのモンスター２体を効果を無効にして特殊召喚し、その２体のみを素材として「Ｎｏ．」Ｘモンスター１体をＸ召喚する。このカードの発動後、ターン終了時まで自分はこの効果によるＸ召喚以外では１回しかＥＸデッキからモンスターを特殊召喚できない。
   ko:
   zh-TW:
   zh-CN:
@@ -35,7 +36,7 @@ series:
 - Utopic
 images:
 - index: 1
-  image: LastHopeNumbers-SUB1-JP-OP.png
+  image: LastHopeNumbers-SUB1-JP-SR.png
 sets:
   ja:
   - set_number: SUB1-JP004
@@ -45,5 +46,5 @@ sets:
     - Secret Rare
 limit_regulation:
   tcg: Not yet released
-  ocg: Not yet released
+  ocg: Unlimited
 yugipedia_page_id: 911465
