--- a/data/cards/05829717.yaml
+++ b/data/cards/05829717.yaml
@@ -1,5 +1,5 @@
-konami_id:
-password:
+konami_id: 18425
+password: 5829717
 name:
   en: Dark Magician the Magical Knight of Dragons
   de:
@@ -22,7 +22,9 @@ text:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    「ブラック・マジシャン」＋レベル７以上のドラゴン族・戦士族モンスター
+    ①：自分のモンスターが守備表示モンスターを攻撃した場合、その守備力を攻撃力が超えた分だけ相手に戦闘ダメージを与える。②：１ターンに１度、自分のモンスターが戦闘で相手モンスターを破壊した時に発動できる。その破壊されたモンスターの元々の攻撃力分のダメージを相手に与える。③：このカードが破壊された場合に発動できる。「ブラック・マジシャン」「竜騎士ガイア」を１体ずつ自分の手札・デッキ・ＥＸデッキ・墓地から選んで特殊召喚する。
   ko:
   zh-TW:
   zh-CN:
@@ -38,7 +40,7 @@ series:
 - Prophecy
 images:
 - index: 1
-  image: DarkMagiciantheMagicalKnightofDragons-SUB1-JP-OP.png
+  image: DarkMagiciantheMagicalKnightofDragons-SUB1-JP-SR.png
 sets:
   ja:
   - set_number: SUB1-JP001
@@ -48,5 +50,5 @@ sets:
     - Secret Rare
 limit_regulation:
   tcg: Not yet released
-  ocg: Not yet released
+  ocg: Unlimited
 yugipedia_page_id: 905490
