--- a/data/cards/13241004.yaml
+++ b/data/cards/13241004.yaml
@@ -27,12 +27,12 @@ text:
   pt: |-
     Durante sua Fase Principal: você pode Invocar por Invocação-Especial 1 monstro "Fofanimal" da sua mão, exceto "Fofanimal Pinguim". Este efeito só pode ser usado uma vez enquanto este card estiver com a face para cima no campo. Se este card for enviado para o Cemitério como uma Matéria de Fusão para uma Invocação-Fusão de um Monstro de Fusão "Peladura": você pode comprar 2 cards e, depois, descartar 1 card. Você só pode usar este efeito de "Fofanimal Pinguim" uma vez por turno.
   ja: |-
-    「ファーニマル・ペンギン」の②の効果は１ターンに１度しか使用できない。①：このカードがフィールドに表側表示で存在する限り１度だけ、自分メインフェイズに発動できる。手札から「ファーニマル・ペンギン」以外の「ファーニマル」モンスター１体を特殊召喚する。②：このカードが「デストーイ」融合モンスターの融合召喚の素材となって墓地へ送られた場合に発動できる。自分はデッキから２枚ドローし、その後手札を１枚選んで捨てる。
+    このカード名の②の効果は１ターンに１度しか使用できない。①：このカードがフィールドに表側表示で存在する限り１度だけ、自分メインフェイズに発動できる。手札から「ファーニマル・ペンギン」以外の「ファーニマル」モンスター１体を特殊召喚する。②：このカードが「デストーイ」融合モンスターの融合召喚の素材となって墓地へ送られた場合に発動できる。自分はデッキから２枚ドローし、その後手札を１枚選んで捨てる。
   ko: |-
     "퍼니멀 펭귄"의 ②의 효과는 1턴에 1번밖에 사용할 수 없다. ①: 이 카드가 필드에 앞면 표시로 존재하는 한 1번만, 자신 메인 페이즈에 발동할 수 있다. 패에서 "퍼니멀 펭귄" 이외의 "퍼니멀" 몬스터 1장을 특수 소환한다. ②: 이 카드가 "데스완구" 융합 몬스터의 융합 소환의 소재가 되어 묘지로 보내졌을 경우에 발동할 수 있다. 자신은 덱에서 2장 드로우하고, 그 후 패를 1장 골라 버린다.
   zh-TW:
   zh-CN: |-
-    此卡名的②效果1回合仅可使用1次。①：只要此卡在场上以表侧表示存在，仅限1次，在自己的主要阶段可以发动。从手牌将"绒毛动物・企鹅"以外的1只"绒毛动物"怪兽特殊召唤。②：此卡作为"魔玩具"融合怪兽的融合召唤素材被送至墓地的情况下可以发动。自己从牌组抽2张，然后挑选1张手牌舍弃。
+    此卡名的②效果1回合仅可使用1次。①：只要此卡在场上以表侧表示存在，仅限1次，在自己的主要阶段可以发动。从手牌将“绒毛动物・企鹅”以外的1只“绒毛动物”怪兽特殊召唤。②：此卡作为“魔玩具”融合怪兽的融合召唤素材被送至墓地的情况下可以发动。自己从牌组抽2张，然后挑选1张手牌舍弃。
 card_type: Monster
 monster_type_line: Fairy / Effect
 attribute: WATER
