--- a/data/cards/19439119.yaml
+++ b/data/cards/19439119.yaml
@@ -27,12 +27,12 @@ text:
   pt: |-
     Se este card for descartado para o Cemitério: escolha 1 outro monstro "Mitológico(a)" de Nível 4 ou menos no seu Cemitério; Invoque o alvo por Invocação-Especial.
   ja: |-
-    このカードが手札から墓地へ捨てられた時、自分の墓地に存在するこのカード以外のレベル４以下の「魔轟神」と名のついたモンスター１体を特殊召喚する。
+    ①：このカードが手札から墓地へ捨てられた場合、このカード以外の自分の墓地のレベル４以下の「魔轟神」モンスター１体を対象として発動する。そのモンスターを特殊召喚する。
   ko: |-
     이 카드가 패에서 묘지에 버려졌을 때 자신의 묘지에 존재하는 이 카드 이외의 레벨 4 이하의 "마굉신"이라는 이름이 붙은 몬스터 1장을 특수 소환한다.
   zh-TW:
   zh-CN: |-
-    ①：此卡从手牌被舍弃至墓地的情况下，以自己墓地的此卡以外的1只等级4以下的"魔轰神"怪兽为对象可以发动。将该怪兽特殊召唤。
+    ①：此卡从手牌被舍弃至墓地的情况下，以自己墓地的此卡以外的1只等级4以下的“魔轰神”怪兽为对象可以发动。将该怪兽特殊召唤。
 card_type: Monster
 monster_type_line: Fiend / Effect
 attribute: LIGHT
