--- a/data/cards/31817415.yaml
+++ b/data/cards/31817415.yaml
@@ -1,5 +1,5 @@
-konami_id:
-password:
+konami_id: 18426
+password: 31817415
 name:
   en: Armed Neos
   de:
@@ -23,7 +23,9 @@ text:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    「Ｅ・ＨＥＲＯ ネオス」＋「アームド・ドラゴン」モンスター
+    このカードは融合召喚でしか特殊召喚できない。①：このカードが特殊召喚に成功した場合に発動できる。自分の墓地のドラゴン族モンスター１体を選び、そのレベル以下のレベルを持つ相手フィールドのモンスターを全て破壊する。②：このカードが戦闘でモンスターを破壊した時に発動できる。このカードは以下の効果を得る。●お互いのメインフェイズに、このカードをリリースして発動できる。ＥＸデッキから「Ｅ・ＨＥＲＯ」融合モンスター１体を召喚条件を無視して特殊召喚する。
   ko:
   zh-TW:
   zh-CN:
@@ -38,7 +40,7 @@ series:
 - Neos
 images:
 - index: 1
-  image: ArmedNeos-SUB1-JP-OP.png
+  image: ArmedNeos-SUB1-JP-SR.png
 sets:
   ja:
   - set_number: SUB1-JP002
@@ -48,5 +50,5 @@ sets:
     - Secret Rare
 limit_regulation:
   tcg: Not yet released
-  ocg: Not yet released
+  ocg: Unlimited
 yugipedia_page_id: 921249
