--- a/data/cards/34773082.yaml
+++ b/data/cards/34773082.yaml
@@ -29,17 +29,17 @@ text:
   ja: |-
     このカード名のカードは１ターンに１枚しか発動できない。①：デッキから「融合」１枚と「エッジインプ」モンスター１体を手札に加える。
   ko: |-
-    이 카드명의 카드는 1턴에 1장밖에 발동할 수 없다. ①: 덱에서 "융합" 1장과 "에지임프" 몬스터 1장을 패에 넣는다.
+    "데스완구 패치워크"는 1턴에 1장밖에 발동할 수 없다. ①: 덱에서 "융합" 1장과 "에지임프" 몬스터 1장을 패에 넣는다.
   zh-TW:
   zh-CN: |-
-    此卡名的卡1回合仅可发动1张。①：从牌组将1张"融合"和1只"锋利小鬼"怪兽加入手牌。
+    此卡名的卡1回合仅可发动1张。①：从牌组将1张“融合”和1只“锋利小鬼”怪兽加入手牌。
 card_type: Spell
 property: Normal
 series:
 - Frightfur
 images:
 - index: 1
-  image: '  FrightfurPatchwork-20TP-JP-C.png    '
+  image: '  FrightfurPatchwork-SUB1-JP-NPR.png  '
   illustration: FrightfurPatchwork-MADU-JP-VG-artwork.png
 - index: '1.1'
   image: FrightfurPatchwork-BLCR-EN-UR-1E.png
