--- a/data/cards/77202120.yaml
+++ b/data/cards/77202120.yaml
@@ -1,5 +1,5 @@
-konami_id:
-password:
+konami_id: 18427
+password: 77202120
 name:
   en: Assault Synchron
   de:
@@ -21,7 +21,8 @@ text:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    このカード名の①②の効果はそれぞれ１ターンに１度しか使用できない。①：自分メインフェイズに発動できる。このカードを手札から特殊召喚する。その後、自分は７００ダメージを受ける。この効果で特殊召喚したこのカードがモンスターゾーンに表側表示で存在する限り、自分はＳモンスターしかＥＸデッキから特殊召喚できない。②：自分フィールドの表側表示のドラゴン族Sモンスターが、リリースされた場合または除外された場合、墓地のこのカードを除外し、そのモンスター１体を対象として発動できる。そのモンスターを特殊召喚する。
   ko:
   zh-TW:
   zh-CN:
@@ -35,7 +36,7 @@ series:
 - Synchron
 images:
 - index: 1
-  image: AssaultSynchron-SUB1-JP-OP.png
+  image: AssaultSynchron-SUB1-JP-SR.png
 sets:
   ja:
   - set_number: SUB1-JP003
@@ -45,5 +46,5 @@ sets:
     - Secret Rare
 limit_regulation:
   tcg: Not yet released
-  ocg: Not yet released
+  ocg: Unlimited
 yugipedia_page_id: 905491
