--- a/data/cards/70551291.yaml
+++ b/data/cards/70551291.yaml
@@ -12,7 +12,7 @@ name:
   ko: 전설의 검투사 카오스 솔저
   ko_rr: Jeonseol-ui Geomtusa Kaoseu Soljeo
   zh-TW:
-  zh-CN: 传说的剑斗士 混沌戦士
+  zh-CN: 传说之剑斗士 混沌士兵
 text:
   en: |-
     You can Ritual Summon this card with "Chaos Form" or "Super Soldier Ritual". Must be Ritual Summoned. During your Draw Phase, before you draw: You can reveal this card in your hand; give up your normal draw this turn, and if you do, add 1 Ritual Spell from your Deck to your hand. Your opponent cannot activate cards or effects during your Battle Phase. When this attacking card, that was Ritual Summoned using a Normal Monster, destroys an opponent's monster by battle: You can shuffle all cards your opponent controls into the Deck.
@@ -27,7 +27,7 @@ text:
     "카오스 폼" "초전사의 의식"에 의해 의식 소환. 이 카드는 의식 소환으로밖에 특수 소환할 수 없다. ①: 자신 드로우 페이즈의 드로우 전에, 패의 이 카드를 상대에게 보여주고 발동할 수 있다. 이 턴에 일반 드로우를 실행하는 대신에, 덱에서 의식 마법 카드 1장을 패에 넣는다. ②: 이 카드가 몬스터 존에 존재하는 한, 자신 배틀 페이즈 중에 상대는 효과를 발동할 수 없다. ③: 일반 몬스터를 사용하여 의식 소환한 이 카드의 공격으로 상대 몬스터를 파괴했을 때에 발동할 수 있다. 상대 필드의 카드를 전부 주인의 덱으로 되돌린다.
   zh-TW:
   zh-CN: |-
-    藉由「カオス・フォーム／混沌形成」「超戦士の儀式／超戦士的仪式」降临。这张卡只能用仪式召唤来特殊召唤。①：自己的抽卡阶段的抽卡前，可以向对手展示手牌的这张卡发动。作为这个回合的通常抽卡的代替，从卡组将1张仪式魔法卡加入手牌。②：只要这张卡在怪兽区存在，自己的战斗阶段里对手就不能发动效果。③：使用通常怪兽来仪式召唤的这张卡的攻击将对手怪兽破坏时可以发动。使对手场上的卡全部返回持有者的卡组。
+    以"混沌形态""超战士的仪式"降临。此卡仅可以仪式召唤方式特殊召唤。①：在自己的抽牌阶段抽牌前，向对手出示手牌中的此卡可以发动。作为此回合通常抽牌的代替，从牌组将1张仪式魔法卡加入手牌。②：只要此卡存在于怪兽区域，在自己的战斗阶段中，对手不可发动效果。③：以使用通常怪兽仪式召唤的此卡的攻击破坏对手怪兽时可以发动。将对手场上的卡全部放回持有者的牌组。
 card_type: Monster
 monster_type_line: Warrior / Ritual / Effect
 attribute: EARTH
@@ -77,6 +77,11 @@ sets:
     - Secret Rare
     - Ultimate Rare
     - Prismatic Secret Rare
+  zh-CN:
+  - set_number: CL03-SC011
+    set_name: Classic Pack 03
+    rarities:
+    - Secret Rare
 limit_regulation:
   tcg: Not yet released
   ocg: Unlimited
