--- a/data/cards/29552709.yaml
+++ b/data/cards/29552709.yaml
@@ -33,11 +33,11 @@ text:
     1 Regulador + 1 ou mais monstros "Gusto" não-Reguladores
     Quando este card for Invocado por Invocação-Sincro: Você pode escolher um card "Gusto" em seu Cemitério: adicione o alvo à sua mão. Seu oponente recebe todo dano de batalha que você tenha recebido de batalhas envolvendo um monstro "Gusto" de face para cima que você controla. Este card não pode ser destruído em batalha.
   ja: |-
-    チューナー＋チューナー以外の「ガスタ」と名のついたモンスター１体以上
-    このカードがシンクロ召喚に成功した時、自分の墓地に存在する「ガスタ」と名のついたカード１枚を選択して手札に戻す事ができる。このカードがフィールド上に表側表示で存在する限り、自分フィールド上に表側表示で存在する「ガスタ」と名のついたモンスターの戦闘によって発生する自分への戦闘ダメージは代わりに相手が受ける。また、このカードは戦闘では破壊されない。
+    チューナー＋チューナー以外の「ガスタ」モンスター１体以上
+    ①：このカードがＳ召喚に成功した時、自分の墓地の「ガスタ」カード１枚を対象として発動できる。そのカードを手札に加える。②：このカードは戦闘では破壊されない。③：このカードがモンスターゾーンに存在する限り、自分の「ガスタ」モンスターの戦闘で発生する自分への戦闘ダメージは代わりに相手が受ける。
   ko: |-
-    튜너 + 튜너 이외의 "가스타"라는 이름이 붙은 몬스터 1장 이상
-    이 카드가 싱크로 소환에 성공했을 때, 자신의 묘지에 존재하는 "가스타"라는 이름이 붙은 카드 1장을 선택하고 패로 되돌릴 수 있다. 이 카드가 필드 위에 앞면 표시로 존재하는 한, 자신 필드 위에 앞면 표시로 존재하는 "가스타"라는 이름이 붙은 몬스터의 전투에 의해서 발생하는 자신에게로의 전투 데미지는 대신 상대가 받는다. 또한, 이 카드는 전투로는 파괴되지 않는다.
+    튜너 ＋ 튜너 이외의 "가스타"라는 이름이 붙은 몬스터 1장 이상
+    이 카드가 싱크로 소환에 성공했을 때, 자신의 묘지에 존재하는 "가스타"라는 이름이 붙은 카드 1장을 선택하고 패로 되돌릴 수 있다. 이 카드가 필드 위에 앞면 표시로 존재하는 한, 자신 필드 위에 앞면 표시로 존재하는 "가스타"라는 이름이 붙은 몬스터의 전투에 의해서 발생하는 자신에게로의 전투 데미지는 대신에 상대가 받는다. 또한, 이 카드는 전투로는 파괴되지 않는다.
   zh-TW:
   zh-CN: |-
     调整＋调整以外的名字带有「薰风」的怪兽1只以上
