--- a/data/cards/81866673.yaml
+++ b/data/cards/81866673.yaml
@@ -12,7 +12,7 @@ name:
   ko: 데스티니 히어로 대시 가이
   ko_rr:
   zh-TW:
-  zh-CN: 命运－英雄 冲刺魔侠
+  zh-CN: 命运-英雄 冲刺魔侠
 text:
   en: |-
     Once per turn: You can Tribute 1 other monster; this card gains 1000 ATK until the end of this turn. If this card attacks, change it to Defense Position at the end of the Battle Phase. Once, while this card is in your GY, when you draw a monster during your Draw Phase: You can reveal it; Special Summon it. This card must be in the GY to activate and to resolve this effect.
@@ -27,7 +27,7 @@ text:
   pt: |-
     Uma vez por turno: você pode oferecer 1 outro monstro como Tributo; este card ganha 1000 de ATK até o final deste turno. Se este card atacar, coloque-o em Posição de Defesa no final da Fase de Batalha. Uma vez, enquanto este card estiver no seu Cemitério, quando você comprar um monstro durante sua Fase de Compra: você pode revelá-lo; Invoque-o por Invocação-Especial. Este card deve estar no Cemitério para ativar e resolver este efeito.
   ja: |-
-    １ターンに１度、自分フィールド上のモンスター１体をリリースして発動できる。このカードの攻撃力はエンドフェイズ時まで１０００ポイントアップする。このカードは攻撃した場合、バトルフェイズ終了時に守備表示になる。また、このカードが墓地に存在する限り１度だけ、自分のドローフェイズ時にカードをドローした時、そのカードがモンスターだった場合、その１体をお互いに確認して自分フィールド上に特殊召喚できる。
+    ①：１ターンに１度、自分フィールドのモンスター１体をリリースして発動できる。このカードの攻撃力はターン終了時まで１０００アップする。②：このカードは攻撃した場合、バトルフェイズ終了時に守備表示になる。③：このカードが墓地に存在する限り１度だけ、自分が自分ドローフェイズにカードをドローした時、そのカードがモンスターだった場合、そのモンスター１体をお互いに確認して発動できる。このカードが墓地に存在する場合、その確認したモンスターを特殊召喚する。
   ko: |-
     1턴에 1번, 자신 필드 위의 몬스터 1장을 릴리스하고 발동할 수 있다. 이 카드의 공격력은 엔드 페이즈시까지 1000 포인트 올린다. 이 카드는 공격했을 경우, 배틀 페이즈 종료시에 수비 표시가 된다. 또한, 이 카드가 묘지에 존재하는 한, 1번만 자신의 드로우 페이즈시에 카드를 드로우했을 때, 그 카드가 몬스터였을 경우, 그 1장을 서로 확인하고 자신 필드 위에 특수 소환할 수 있다.
   zh-TW:
