--- a/data/cards/98506199.yaml
+++ b/data/cards/98506199.yaml
@@ -12,7 +12,7 @@ name:
   ko: 윈드페가수스<ruby>＠<rt>앳</rt></ruby>이그니스터
   ko_rr: Windeupegasuseu Aet Igeuniseuteu
   zh-TW:
-  zh-CN: 风飞马@伊格尼斯者
+  zh-CN: 风飞马＠伊格尼斯者
 text:
   en: |-
     1 Tuner + 1+ non-Tuner monsters
@@ -40,8 +40,8 @@ text:
     이 카드명의 ①②의 효과는 각각 1턴에 1번밖에 사용할 수 없다. ①: 자신 메인 페이즈에 발동할 수 있다. 자신 필드의 "＠(앳)이그니스터" 몬스터의 수까지, 상대 필드의 마법 / 함정 카드를 고르고 파괴한다. ②: 이 카드가 필드 / 묘지에 존재하는 상태에서, 이 카드 이외의 자신 필드의 카드가 전투 또는 상대 효과로 파괴되었을 경우, 이 카드를 제외하고, 상대 필드의 카드 1장을 대상으로 하여 발동할 수 있다. 그 카드를 주인의 덱으로 되돌린다.
   zh-TW:
   zh-CN: |-
-    协调＋1只以上协调以外的怪兽
-    此卡名的①②效果1回合仅可各使用1次。①：在自己的主要阶段可以发动。挑选对手场上的魔法・陷阱卡破坏，数量最多为自己场上的"@伊格尼斯者"怪兽数量。②：此卡存在于场上・墓地的状态下，自己场上此卡以外的卡因战斗或对手的效果被破坏的情况下，将此卡除外，以对手场上的1张卡为对象可以发动。将该卡放回持有者的牌组。
+    协调+1只以上协调以外的怪兽
+    此卡名的①②效果1回合仅可各使用1次。①：在自己的主要阶段可以发动。挑选对手场上的魔法・陷阱卡破坏，数量最多为自己场上的“＠伊格尼斯者”怪兽数量。②：此卡存在于场上・墓地的状态下，自己场上此卡以外的卡因战斗或对手的效果被破坏的情况下，将此卡除外，以对手场上的1张卡为对象可以发动。将该卡放回持有者的牌组。
 card_type: Monster
 monster_type_line: Cyberse / Synchro / Effect
 attribute: WIND
