--- a/data/cards/11069680.yaml
+++ b/data/cards/11069680.yaml
@@ -32,9 +32,7 @@ text:
     이 카드명의 ①②의 효과는 각각 1턴에 1번밖에 사용할 수 없다. ①: 패에서 이 카드와 튜너 1장을 버리고 발동할 수 있다. 덱에서 "싱크론" 몬스터 1장을 패에 넣는다. ②: 이 카드가 싱크로 소재로서 묘지로 보내졌을 경우, 자신 묘지의 튜너 1장을 대상으로 하고 발동할 수 있다. 그 몬스터를 수비 표시로 특수 소환한다. 이 효과로 특수 소환한 몬스터는, 이 턴에 효과를 발동할 수 없다.
   zh-TW:
   zh-CN: |-
-    这个卡名的①②的效果1回合各能使用1次。
-    ①：从手卡把这张卡和1只调整丢弃才能发动。从卡组把1只「同调士」怪兽加入手卡。
-    ②：这张卡作为同调素材送去墓地的场合，以自己墓地1只调整为对象才能发动。那只怪兽守备表示特殊召唤。这个效果特殊召唤的怪兽在这个回合不能把效果发动。
+    此卡名的①②效果1回合仅可各使用1次。①：从手牌将此卡和1只协调舍弃可以发动。从牌组将1只“同步士”怪兽加入手牌。②：此卡作为同步素材被送至墓地的情况下，以自己墓地的1只协调为对象可以发动。以守备表示形式将该怪兽特殊召唤。以此效果特殊召唤的怪兽此回合不可发动效果。
 card_type: Monster
 monster_type_line: Warrior / Effect
 attribute: EARTH
@@ -100,11 +98,17 @@ sets:
   - set_number: SUB1-JP019
     set_name: Secret Utility Box
     rarities:
+    - Normal Parallel Rare
   ko:
   - set_number: DP23-KR024
     set_name: 'Duelist Pack: Legend Duelist 6'
     rarities:
     - Super Rare
+  zh-CN:
+  - set_number: SD28-SC015
+    set_name: 'Structure Deck: Synchron Extreme'
+    rarities:
+    - Common
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
