--- a/data/cards/11738489.yaml
+++ b/data/cards/11738489.yaml
@@ -12,7 +12,7 @@ name:
   ko: 디 어라이벌 사이버스<ruby>＠<rt>앳</rt></ruby>이그니스터
   ko_rr: Di Eoraibeol Saibeoseu Aet Igeuniseuteo
   zh-TW:
-  zh-CN: 到临电子界@伊格尼斯者
+  zh-CN: 到临电子界＠伊格尼斯者
 text:
   en: |-
     3+ monsters with different Attributes
@@ -41,7 +41,7 @@ text:
   zh-TW:
   zh-CN: |-
     属性不同的怪兽3只以上
-    ①："到临电子界@伊格尼斯者"在自己场上仅可有1只以表侧表示存在。②：此卡原本的攻击力变为相当于作为此卡连接素材的怪兽数量×1000的数值。③：此卡不受其他卡的效果影响。④：1回合1次，以场上此卡以外的1只怪兽为对象可以发动。将该怪兽破坏，将1只"@伊格尼斯者衍生物"（电子界族・暗・星1・攻／守0）特殊召唤至此卡连接端的自己场上。
+    ①：“到临电子界＠伊格尼斯者”在自己场上仅可有1只以表侧表示存在。②：此卡原本的攻击力变为相当于作为此卡连接素材的怪兽数量×1000的数值。③：此卡不受其他卡的效果影响。④：1回合1次，以场上此卡以外的1只怪兽为对象可以发动。将该怪兽破坏，将1只“＠伊格尼斯者衍生物”（电子界族・暗・星1・攻/守0）特殊召唤至此卡连接端的自己场上。
 card_type: Monster
 monster_type_line: Cyberse / Link / Effect
 attribute: DARK
