--- a/data/cards/30757127.yaml
+++ b/data/cards/30757127.yaml
@@ -12,7 +12,7 @@ name:
   ko: 데스티니 히어로 데들리 가이
   ko_rr:
   zh-TW:
-  zh-CN: 命运－英雄 绝命魔侠
+  zh-CN: 命运-英雄 绝命魔侠
 text:
   en: |-
     1 "Destiny HERO" monster + 1 DARK Effect Monster
@@ -34,14 +34,14 @@ text:
     (Efeito Rápido): você pode descartar 1 card; envie 1 monstro "HERÓI do Destino" da sua mão ou do Deck para o Cemitério e, se isso acontecer, até o final deste turno, os monstros "HERÓI do Destino" que você controla ganham 200 de ATK para cada monstro "HERÓI do Destino" no seu Cemitério. Você só pode usar este efeito de "HERÓI do Destino - Perigoso" uma vez por turno.
   ja: |-
     「Ｄ－ＨＥＲＯ」モンスター＋闇属性の効果モンスター
-    「Ｄ－ＨＥＲＯ デッドリーガイ」の効果は１ターンに１度しか使用できない。①：手札を１枚捨てて発動できる。手札・デッキから「Ｄ－ＨＥＲＯ」モンスター１体を墓地へ送り、自分フィールドの全ての「Ｄ－ＨＥＲＯ」モンスターの攻撃力はターン終了時まで、自分の墓地の「Ｄ－ＨＥＲＯ」モンスターの数×２００アップする。この効果は相手ターンでも発動できる。
+    このカード名の効果は１ターンに１度しか使用できない。①：手札を１枚捨てて発動できる。手札・デッキから「Ｄ－ＨＥＲＯ」モンスター１体を墓地へ送る。その後、自分の墓地に「Ｄ－ＨＥＲＯ」モンスターが存在する場合、自分フィールドの全ての「Ｄ－ＨＥＲＯ」モンスターの攻撃力はターン終了時まで、自分の墓地の「Ｄ－ＨＥＲＯ」モンスターの数×２００アップする。この効果は相手ターンでも発動できる。
   ko: |-
     "데스티니 히어로" 몬스터 ＋ 어둠 속성의 효과 몬스터
     "데스티니 히어로 데들리 가이"의 효과는 1턴에 1번밖에 사용할 수 없다. ①: 패를 1장 버리고 발동할 수 있다. 패 / 덱에서 "데스티니 히어로" 몬스터 1장을 묘지로 보내고, 자신 필드의 모든 "데스티니 히어로" 몬스터의 공격력은 턴 종료시까지, 자신 묘지의 "데스티니 히어로" 몬스터의 수 × 200 올린다. 이 효과는 상대 턴에도 발동할 수 있다.
   zh-TW:
   zh-CN: |-
-    "命运－英雄"怪兽＋暗属性效果怪兽
-    此卡名的效果1回合仅可使用1次。①：舍弃1张手牌可以发动。从手牌・牌组将1只"命运－英雄"怪兽送至墓地，自己场上的所有"命运－英雄"怪兽的攻击力直至回合结束时为止，上升相当于自己墓地的"命运－英雄"怪兽数量×200的数值。此效果在对手回合中也可以发动。
+    “命运-英雄”怪兽＋暗属性效果怪兽
+    此卡名的效果1回合仅可使用1次。①：舍弃1张手牌可以发动。从手牌・牌组将1只“命运-英雄”怪兽送至墓地，自己场上的所有“命运-英雄”怪兽的攻击力直至回合结束时为止，上升相当于自己墓地的“命运-英雄”怪兽数量×200的数值。此效果在对手回合中也可以发动。
 card_type: Monster
 monster_type_line: Warrior / Fusion / Effect
 attribute: DARK
