--- a/data/cards/32339440.yaml
+++ b/data/cards/32339440.yaml
@@ -27,7 +27,7 @@ text:
   pt: |-
     Uma vez por turno, durante sua Fase Final: você pode adicionar 1 monstro "Bujin" do seu Deck à sua mão e, depois, enviar 1 card da sua mão para o Cemitério. Você só pode controlar 1 "Bujin Yamato".
   ja: |-
-    ①：「武神－ヤマト」は自分フィールドに１体しか表側表示で存在できない。②：自分エンドフェイズに発動できる。デッキから「武神」モンスター１体を手札に加え、その後手札を１枚選んで墓地へ送る。
+    ①：「武神－ヤマト」は自分フィールドに１体しか表側表示で存在できない。②：自分エンドフェイズに発動できる。デッキから「武神」モンスター１体を手札に加える。その後、自分の手札を１枚選んで墓地へ送る。
   ko: |-
     ①: "무사신－야마토"는 자신 필드에 1장밖에 앞면 표시로 존재할 수 없다. ②: 자신 엔드 페이즈에 발동할 수 있다. 덱에서 "무사신" 몬스터 1장을 패에 넣고, 그 후 패를 1장 골라 묘지로 보낸다.
   zh-TW:
