--- a/data/cards/68464358.yaml
+++ b/data/cards/68464358.yaml
@@ -32,7 +32,7 @@ text:
     이 카드명의 효과는 1턴에 1번밖에 사용할 수 없다. ①: 자신 필드의 앞면 표시의 카드 1장을 대상으로 하고 발동할 수 있다. 그 카드를 파괴하고, 덱에서 "바렛 트레이서" 이외의 "바렛" 몬스터 1장을 특수 소환한다. 이 효과의 발동 후, 턴 종료시까지 자신은 어둠 속성 몬스터밖에 엑스트라 덱에서 특수 소환할 수 없다. 이 효과는 상대 턴에도 발동할 수 있다.
   zh-TW:
   zh-CN: |-
-    此卡名的效果1回合仅可使用1次。①：以自己场上的1张表侧表示卡为对象可以发动。将该卡破坏，从牌组将1只"枪弹曳光者"以外的"枪弹"怪兽特殊召唤。此效果发动后，直至回合结束时为止自己从额外牌组仅可特殊召唤暗属性怪兽。此效果在对手回合中也可以发动。
+    此卡名的效果1回合仅可使用1次。①：以自己场上的1张表侧表示卡为对象可以发动。将该卡破坏，从牌组将1只“枪弹曳光者”以外的“枪弹”怪兽特殊召唤。此效果发动后，直至回合结束时为止自己从额外牌组仅可特殊召唤暗属性怪兽。此效果在对手回合中也可以发动。
 card_type: Monster
 monster_type_line: Dragon / Tuner / Effect
 attribute: DARK
