--- a/data/cards/71175527.yaml
+++ b/data/cards/71175527.yaml
@@ -27,9 +27,9 @@ text:
   pt: |-
     Quando este card for Invocado por Invocação-Normal ou Especial: você pode escolher 1 monstro Regulador de VENTO no seu Cemitério; Invoque o alvo por Invocação-Especial em Posição de Defesa com a face para cima. Seus efeitos são negados. Se você ativar este efeito, você não pode Invocar monstros por Invocação-Especial pelo restante deste turno, exceto monstros de VENTO. Você só pode usar este efeito de "Pilica, Descendente de Gusto" uma vez por turno.
   ja: |-
-    このカードが召喚・特殊召喚に成功した時、自分の墓地から風属性のチューナー１体を選択して表側守備表示で特殊召喚できる。この効果で特殊召喚したモンスターの効果は無効される。この効果を発動したターン、自分は風属性以外のモンスターを特殊召喚できない。「ガスタの神裔　ピリカ」の効果は１ターンに１度しか使用できない。
+    このカード名の効果は１ターンに１度しか使用できない。①：このカードが召喚・特殊召喚に成功した時、自分の墓地の風属性チューナー１体を対象として発動できる。その風属性モンスターを守備表示で特殊召喚する。この効果で特殊召喚したモンスターの効果は無効化される。この効果の発動後、ターン終了時まで自分は風属性モンスターしか特殊召喚できない。
   ko: |-
-    이 카드가 일반 소환 / 특수 소환에 성공했을 때, 자신의 묘지에서 바람 속성의 튜너 1장을 선택하고 앞면 수비 표시로 특수 소환할 수 있다. 이 효과로 특수 소환한 몬스터의 효과는 무효화된다. 이 효과를 발동한 턴, 자신은 바람 속성 이외의 몬스터를 특수 소환할 수 없다. "가스타의 신예 피리카" 의 효과는 1턴에 1번밖에 사용할 수 없다.
+    이 카드가 일반 소환 / 특수 소환에 성공했을 때, 자신의 묘지에서 바람 속성의 튜너 1장을 선택하고 앞면 수비 표시로 특수 소환할 수 있다. 이 효과로 특수 소환한 몬스터의 효과는 무효화된다. 이 효과를 발동한 턴에, 자신은 바람 속성 이외의 몬스터를 특수 소환할 수 없다. "가스타의 신예 피리카"의 효과는 1턴에 1번밖에 사용할 수 없다.
   zh-TW:
   zh-CN: |-
     这张卡召唤·特殊召唤成功时，可以从自己墓地选择1只风属性的调整表侧守备表示特殊召唤。这个效果特殊召唤的怪兽的效果无效化。这个效果发动过的回合，自己不能把风属性以外的怪兽特殊召唤。「薰风的神裔 皮莉佳」的效果1回合只能使用1次。
