--- a/data/cards/68073522.yaml
+++ b/data/cards/68073522.yaml
@@ -41,7 +41,7 @@ images:
   illustration: '    SoulAbsorption-TF04-JP-VG.png'
 - index: '1.1'
   image: SoulAbsorption-THSF-EN-SR-1E.png
-  illustration: SoulAbsorption-TF04-EN-VG.jpg
+  illustration: SoulAbsorption-TF04-EN-VG-artwork.png
 sets:
   en:
   - set_number: DR2-EN046
