--- a/data/cards/34646691.yaml
+++ b/data/cards/34646691.yaml
@@ -38,10 +38,10 @@ property: Continuous
 images:
 - index: 1
   image: '  Stumbling-EE2-JP-C.jpg'
-  illustration: '   Stumbling-TF04-JP-VG.jpg'
+  illustration: '   Stumbling-TF05-JP-VG-artwork.png'
 - index: '1.1'
   image: Stumbling-DR2-EN-C-UE.png
-  illustration: Stumbling-TF04-EN-VG.jpg
+  illustration: Stumbling-TF04-EN-VG-artwork.png
 sets:
   en:
   - set_number: IOC-EN035
