--- a/data/rush/16900.yaml
+++ b/data/rush/16900.yaml
@@ -30,7 +30,7 @@ effect_types:
 - Multi-Choice
 effect:
   en: |-
-    ● This card gains ATK equal to [the number of different Attributes in the Graveyards] x 400 until the end of this turn.
+    ● This card gains ATK equal to [the number of different Attributes in both players' Graveyards] x 400 until the end of this turn.
     ● Shuffle 1 monster from your Graveyard into the Deck, then draw 1 card.
   de:
   es:
