--- a/data/cards/95856586.yaml
+++ b/data/cards/95856586.yaml
@@ -12,7 +12,7 @@ name:
   ko: 제알 필드
   ko_rr: Jeal Pildeu
   zh-TW:
-  zh-CN: 异热同心力场
+  zh-CN: ZEXAL领域
 text:
   en: |-
     Your opponent cannot activate cards or effects in response to the activation of your cards and effects that target an Xyz Monster you control. During your Draw Phase, before you draw: You can place 1 "Shining Draw" from your Deck on top of your Deck. If an Xyz Monster(s) is Special Summoned to your field (except during the Damage Step): You can target 1 of those monsters; attach 1 Xyz Monster from your Extra Deck or GY to that monster as material. You can only use this effect of "Zexal Field" once per turn.
@@ -32,7 +32,7 @@ text:
     이 카드명의 ②의 효과는 1턴에 1번밖에 사용할 수 없다. ①: 자신 필드의 엑시즈 몬스터를 대상으로 하는, 자신의 카드 효과의 발동에 대하여, 상대는 마법 / 함정 / 몬스터의 효과를 발동할 수 없다. ②: 자신 필드에 엑시즈 몬스터가 특수 소환되었을 경우, 그 몬스터 1장을 대상으로 하고 발동할 수 있다. 자신의 엑스트라 덱 / 묘지에서 엑시즈 몬스터 1장을 고르고, 대상 몬스터 아래에 겹쳐 엑시즈 소재로 한다. ③: 자신 드로우 페이즈의 드로우 전에 발동할 수 있다. 덱에서 "샤이닝 드로우" 1장을 고르고 덱 맨 위에 놓는다.
   zh-TW:
   zh-CN: |-
-    这个卡名的②效果1回合只能使用1次。①：对手不能对应以自己场上的多维怪兽为对象的自己的卡的效果的发动来发动魔法、陷阱或怪兽的效果。②：自己场上有多维怪兽被特殊召唤的场合，可以以那样的1只怪兽为对象发动。从自己的额外卡组或墓地选1只多维怪兽叠放在对象怪兽下面作为多维素材。③：自己的抽卡阶段的抽卡前可以发动。从卡组选1张「シャイニング・ドロー／闪光抽卡」放置在卡组最上面。
+    此卡名的②效果1回合仅可使用1次。①：应对以自己场上超量怪兽为对象的、自己的卡的效果发动，对手不可发动魔法・陷阱・怪兽的效果。②：超量怪兽被特殊召唤至自己场上的情况下，以该1只怪兽为对象可以发动。从自己的额外牌组・墓地挑选1只超量怪兽，重叠在对象怪兽下方作为超量素材。③：自己抽牌阶段的抽牌前可以发动。从牌组挑选1张"闪光抽牌"，放在牌组最上面。
 card_type: Spell
 property: Field
 series:
@@ -73,6 +73,11 @@ sets:
     - Normal Parallel Rare
   ko:
   - set_number: SD42-KR021
+    set_name: 'Structure Deck: Overlay Universe'
+    rarities:
+    - Normal Parallel Rare
+  zh-CN:
+  - set_number: SD42-SC021
     set_name: 'Structure Deck: Overlay Universe'
     rarities:
     - Normal Parallel Rare
