--- a/rush.yaml
+++ b/rush.yaml
@@ -43126,7 +43126,7 @@ effect_types:
 - Multi-Choice
 effect:
   en: |-
-    ● This card gains ATK equal to [the number of different Attributes in the Graveyards] x 400 until the end of this turn.
+    ● This card gains ATK equal to [the number of different Attributes in both players' Graveyards] x 400 until the end of this turn.
     ● Shuffle 1 monster from your Graveyard into the Deck, then draw 1 card.
   de:
   es:
@@ -86849,3 +86849,177 @@ sets:
     rarities:
     - Super Rare
 yugipedia_page_id: 922733
+---
+konami_id:
+name:
+  en: Transamuroad Rainac
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: トランザムロード・ライナック
+  ja_romaji: Toranzamurōdo Rainakku
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    Send the top card of your Deck to the Graveyard.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    Special Summon 1 Galaxy Type Normal Monster from your Graveyard face-up to your field. Then, you can make all face-up Galaxy Type monsters on your field gain ATK equal to [the number of different Attributes in both players' Graveyards] x 300 until the end of this turn.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Monster
+monster_type_line: Galaxy / Fusion / Effect
+attribute: LIGHT
+level: 9
+atk: 2900
+def: 2000
+materials:
+  en: |-
+    "Transamu Rainac" + "Sevens Road Magician"
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+series:
+- Transamu
+images:
+- index: 1
+  image: TransamuroadRainac-RDKP12-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/KP12-JP030
+    set_name: 'Deck Mod Pack: Double Star of the Assault!!'
+    rarities:
+    - Ultra Rare
+    - Rush Rare
+yugipedia_page_id: 923448
+---
+konami_id:
+name:
+  en: Road Arms - Sword Breaker
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: ロードアームズ－ソードブレイカー
+  ja_romaji: Rōdo Āmuzu - Sōdo Bureikā
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    If you have no other face-up "Road Arms - Sword Breaker" on your field, equip this card to 1 face-up "Sevens Road Magician" on your field.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    The equipped monster gains ATK equal to [the number of equipped Equip Spell Cards on the field] x 1000 and cannot be destroyed by your opponent's Trap Card effects.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Spell
+property: Equip
+images:
+- index: 1
+  image: RoadArmsSwordBreaker-RDKP12-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/KP12-JP045
+    set_name: 'Deck Mod Pack: Double Star of the Assault!!'
+    rarities:
+    - Rare
+yugipedia_page_id: 923449
+---
+konami_id:
+name:
+  en: Back To The☆Fusion
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: バック・トゥ・ザ☆フュージョン
+  ja_romaji: Bakku Tu Za☆Fyūjon
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    You have 2 or more face-up monsters with the same name on your field.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    Add 1 "Fusion" from your Graveyard to your hand. Then, if you have 2 or more Normal Monsters with the same name in your Graveyard, you can add 1 of them to your hand.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Spell
+property: Normal
+series:
+- The☆
+images:
+- index: 1
+  image: BackToTheFusion-RDKP12-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/KP12-JP047
+    set_name: 'Deck Mod Pack: Double Star of the Assault!!'
+    rarities:
+    - Common
+yugipedia_page_id: 923450
