--- a/rush.yaml
+++ b/rush.yaml
@@ -35588,7 +35588,7 @@ yugipedia_page_id: 821923
 ---
 konami_id: 16661
 name:
-  en: Battle Ox Tongue
+  en: Barbeque Ox
   de:
   es:
   fr:
@@ -35624,7 +35624,7 @@ series:
 - Yakiniku
 images:
 - index: 1
-  image: BattleOxTongue-RDKP06-JP-C.png
+  image: BarbequeOx-RDKP06-JP-C.png
 sets:
   ja:
   - set_number: RD/KP06-JP004
@@ -35640,7 +35640,7 @@ yugipedia_page_id: 812694
 ---
 konami_id: 16662
 name:
-  en: Roastic Horseman
+  en: Mystic Roastman
   de:
   es:
   fr:
@@ -35676,7 +35676,7 @@ series:
 - Yakiniku
 images:
 - index: 1
-  image: RoasticHorseman-RDKP06-JP-C.png
+  image: MysticRoastman-RDKP06-JP-C.png
 sets:
   ja:
   - set_number: RD/KP06-JP005
@@ -35692,7 +35692,7 @@ yugipedia_page_id: 812695
 ---
 konami_id: 16663
 name:
-  en: Archfiend Marmot of Nefaribousness
+  en: Archfiend Marmot of Deliciousness
   de:
   es:
   fr:
@@ -35728,7 +35728,7 @@ series:
 - Yakiniku
 images:
 - index: 1
-  image: ArchfiendMarmotofNefaribousness-RDKP06-JP-R.png
+  image: ArchfiendMarmotofDeliciousness-RDKP06-JP-R.png
 sets:
   ja:
   - set_number: RD/KP06-JP006
@@ -36252,7 +36252,7 @@ yugipedia_page_id: 812385
 ---
 konami_id: 16673
 name:
-  en: Terror Attack Dragon Stock Buster
+  en: Stock Buster Dragon
   de:
   es:
   fr:
@@ -36300,7 +36300,7 @@ atk: 2400
 def: 1600
 images:
 - index: 1
-  image: TerrorAttackDragonStockBuster-RDSD03-JP-C.png
+  image: StockBusterDragon-RDSD03-JP-C.png
 sets:
   ja:
   - set_number: RD/KP06-JP016
@@ -36324,7 +36324,7 @@ yugipedia_page_id: 821976
 ---
 konami_id: 16674
 name:
-  en: Steelstrike Dragon Metagias
+  en: Steel Strike Dragon Metagias
   de:
   es:
   fr:
@@ -36374,7 +36374,7 @@ series:
 - Strike Dragon
 images:
 - index: 1
-  image: SteelstrikeDragonMetagias-RDKP06-JP-UR.png
+  image: SteelStrikeDragonMetagias-RDKP06-JP-UR.png
 sets:
   ja:
   - set_number: RD/KP06-JP017
@@ -36859,7 +36859,7 @@ yugipedia_page_id: 821891
 ---
 konami_id: 16682
 name:
-  en: Harami Kushiro the Shichirin Samurai
+  en: Shichirin Samurai - Kushiro the Skewer Master
   de:
   es:
   fr:
@@ -36909,7 +36909,7 @@ series:
 - Yakiniku
 images:
 - index: 1
-  image: HaramiKushirotheShichirinSamurai-RDKP06-JP-SR.png
+  image: ShichirinSamuraiKushirotheSkewerMaster-RDKP06-JP-SR.png
 sets:
   ja:
   - set_number: RD/KP06-JP025
@@ -55977,7 +55977,7 @@ atk: 2400
 def: 1800
 materials:
   en: |-
-    "Battle Ox Tongue" + "Roastic Horseman"
+    "Barbeque Ox" + "Mystic Roastman"
   de:
   es:
   fr:
@@ -56023,7 +56023,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    Shuffle 2 "Harami Kushiro the Shichirin Samurai" and/or "Taste Inspector" from your Graveyard into the Deck.
+    Shuffle 2 "Shichirin Samurai - Kushiro the Skewer Master" and/or "Taste Inspector" from your Graveyard into the Deck.
   de:
   es:
   fr:
@@ -56057,7 +56057,7 @@ atk: 2900
 def: 1400
 materials:
   en: |-
-    "Harami Kushiro the Shichirin Samurai" + "Taste Inspector"
+    "Shichirin Samurai - Kushiro the Skewer Master" + "Taste Inspector"
   de:
   es:
   fr:
@@ -64992,7 +64992,7 @@ atk: 3000
 def: 2000
 materials:
   en: |-
-    "Steelstrike Dragon Metagias" + "The☆Dragon"
+    "Steel Strike Dragon Metagias" + "The☆Dragon"
   de:
   es:
   fr:
