--- a/data/cards/35316708.yaml
+++ b/data/cards/35316708.yaml
@@ -26,7 +26,7 @@ text:
     Salta la Draw Phase nel prossimo turno del tuo avversario.
   pt:
   ja: |-
-    次の相手ターンのドローフェイズをスキップする。
+    ①：次の相手ドローフェイズをスキップする。
   ko: |-
     다음 상대 턴의 드로우 페이즈를 스킵한다.
   zh-TW:
