--- a/data/rush/16680.yaml
+++ b/data/rush/16680.yaml
@@ -28,7 +28,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Set up to 1 each of "Deadly Business Card Exchange" and "Strong Z" from your Graveyard to your Spell & Trap Zone. This turn, you cannot attack with non-Machine Type monsters.
+    Set up to 1 each of "Business Card Barrage" and "Nutrient Zero" from your Graveyard to your Spell & Trap Zone. This turn, you cannot attack with non-Machine Type monsters.
   de:
   es:
   fr:
