--- a/data/rush/17318.yaml
+++ b/data/rush/17318.yaml
@@ -28,7 +28,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Add up to 1 each of "Just Meat", "Burning Beast Quality", and "Wild Kitchen" from your Graveyard to your hand.
+    Add up to 1 each of "Best Bite", "B・B・Q", and "Wild Kitchen" from your Graveyard to your hand.
   de:
   es:
   fr:
