--- a/data/cards/03078576.yaml
+++ b/data/cards/03078576.yaml
@@ -27,7 +27,7 @@ text:
   pt: |-
     Não pode ser Invocado por Invocação-Especial. Durante a Fase Final do turno em que este card foi Invocado por Invocação-Normal ou virado com a face para cima: devolva-o para a mão. Se este card causar dano de batalha ao seu oponente: pule a Fase de Compra do próximo turno dele.
   ja: |-
-    このカードは特殊召喚できない。召喚・リバースしたターンのエンドフェイズ時に持ち主の手札に戻る。このカードが相手ライフに戦闘ダメージを与えた場合、次の相手ターンのドローフェイズをスキップする。
+    このカードは特殊召喚できない。①：このカードが相手に戦闘ダメージを与えた場合に発動する。次の相手ドローフェイズをスキップする。②：このカードが召喚・リバースしたターンのエンドフェイズに発動する。このカードを持ち主の手札に戻す。
   ko: |-
     이 카드는 특수 소환할 수 없다. 일반 소환 / 리버스한 턴의 엔드 페이즈시에 주인의 패로 되돌아간다. 이 카드가 상대 플레이어에게 전투 데미지를 주었을 경우, 다음 상대 턴의 드로우 페이즈를 스킵한다.
   zh-TW:
