--- a/data/cards/78734254.yaml
+++ b/data/cards/78734254.yaml
@@ -26,7 +26,7 @@ text:
     Il nome di questa carta è considerato anche come "Delfino Aqua Neo-Spaziale". Questa carta non può essere Evocata tramite Evocazione Speciale se non con "NEX". Una volta per turno, puoi scartare 1 carta per guardare la mano del tuo avversario e scegliere da essa 1 Carta Mostro. Se controlli un mostro con ATK pari o superiore a quello del mostro scelto, distrutti il mostro scelto ed infliggi 500 danni al tuo avversario.
   pt:
   ja: |-
-    このカード名はルール上「Ｎ・アクア・ドルフィン」としても扱う。このカードは「ＮＥＸ」の効果でのみ特殊召喚できる。手札を１枚捨てる。相手の手札を確認してモンスターカード１枚を選択する。選択したモンスターの攻撃力以上のモンスターが自分フィールド上に存在する場合、選択したモンスターカードを破壊して相手ライフに５００ポイントダメージを与える。この効果は１ターンに１度しか使用できない。
+    このカード名はルール上「Ｎ・アクア・ドルフィン」としても扱う。このカードは「ＮＥＸ」の効果でのみ特殊召喚できる。①：１ターンに１度、手札を１枚捨てて発動できる。相手の手札を確認し、その中からモンスター１体を選ぶ。選んだモンスターの攻撃力以上の攻撃力を持つモンスターが自分フィールドに存在する場合、選んだモンスターを破壊し、相手に５００ダメージを与える。
   ko: |-
     이 카드명은 룰상 "네오 스페이시언 아쿠아 돌핀"으로도 취급한다. 이 카드는 "NEX"의 효과로만 특수 소환할 수 있다. ①: 1턴에 1번, 패를 1장 버리고 발동할 수 있다. 상대의 패를 확인하고, 그 중에서 몬스터 1장을 고른다. 고른 몬스터의 공격력 이상의 공격력을 가지는 몬스터가 자신 필드에 존재할 경우, 고른 몬스터를 파괴하고, 상대에게 500 데미지를 준다.
   zh-TW:
