--- a/data/rush/16702.yaml
+++ b/data/rush/16702.yaml
@@ -1,6 +1,6 @@
 konami_id: 16702
 name:
-  en: Deadly Business Card Exchange
+  en: Business Card Barrage
   de:
   es:
   fr:
@@ -46,7 +46,7 @@ series:
 - Worker Warrior
 images:
 - index: 1
-  image: DeadlyBusinessCardExchange-RDKP06-JP-R.png
+  image: BusinessCardBarrage-RDKP06-JP-R.png
 sets:
   ja:
   - set_number: RD/KP06-JP046
