--- a/data/rush/16703.yaml
+++ b/data/rush/16703.yaml
@@ -1,6 +1,6 @@
 konami_id: 16703
 name:
-  en: Strong Z
+  en: Nutrient Zero
   de:
   es:
   fr:
@@ -44,7 +44,7 @@ card_type: Spell
 property: Normal
 images:
 - index: 1
-  image: StrongZ-RDGRD2-JP-C.png
+  image: NutrientZero-RDGRD2-JP-C.png
 sets:
   ja:
   - set_number: RD/KP06-JP047
