--- a/data/rush/16704.yaml
+++ b/data/rush/16704.yaml
@@ -1,6 +1,6 @@
 konami_id: 16704
 name:
-  en: Just Meat
+  en: Best Bite
   de:
   es:
   fr:
@@ -46,7 +46,7 @@ series:
 - Yakiniku
 images:
 - index: 1
-  image: JustMeat-RDKP06-JP-C.png
+  image: BestBite-RDKP06-JP-C.png
 sets:
   ja:
   - set_number: RD/KP06-JP048
