--- a/data/rush/16705.yaml
+++ b/data/rush/16705.yaml
@@ -1,6 +1,6 @@
 konami_id: 16705
 name:
-  en: Burning Beast Quality
+  en: B・B・Q
   de:
   es:
   fr:
@@ -46,7 +46,7 @@ series:
 - Yakiniku
 images:
 - index: 1
-  image: BurningBeastQuality-RDKP06-JP-C.png
+  image: BBQ-RDKP06-JP-C.png
 sets:
   ja:
   - set_number: RD/KP06-JP049
