--- a/data/rush/16718.yaml
+++ b/data/rush/16718.yaml
@@ -1,6 +1,6 @@
 konami_id: 16718
 name:
-  en: Attack Salary Cut
+  en: Salary Slash
   de:
   es:
   fr:
@@ -46,7 +46,7 @@ series:
 - Worker Warrior
 images:
 - index: 1
-  image: AttackSalaryCut-RDSD02-JP-C.png
+  image: SalarySlash-RDSD02-JP-C.png
 sets:
   ja:
   - set_number: RD/KP06-JP062
