--- a/data/rush/16922.yaml
+++ b/data/rush/16922.yaml
@@ -28,7 +28,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    This card gains ATK equal to [the number of Machine Type monsters in your Graveyard] x 200 until the end of this turn, then you can place 1 "Attack Salary Cut" or "Battle Demotion" from your Graveyard on the bottom of the Deck, and if you do, you can draw 1 card.
+    This card gains ATK equal to [the number of Machine Type monsters in your Graveyard] x 200 until the end of this turn, then you can place 1 "Salary Slash" or "Battle Demotion" from your Graveyard on the bottom of the Deck, and if you do, you can draw 1 card.
   de:
   es:
   fr:
