--- a/data/cards/05128859.yaml
+++ b/data/cards/05128859.yaml
@@ -34,10 +34,10 @@ text:
     Esta carta somente pode ser Special Summoned do seu Extra Deck por retornar as cartas citadas do seu lado do campo para o Deck (você não usa "Polymerization".) Destrua aleatoriamente uma carta da mão de seu oponente. Este efeito somente pode ser usado uma vez por turno.
   ja: |-
     「Ｅ・ＨＥＲＯ ネオス」＋「Ｎ・マリン・ドルフィン」
-    自分フィールド上に存在する上記のカードをデッキに戻した場合のみ、融合デッキから特殊召喚が可能（「融合」魔法カードは必要としない）。相手の手札１枚をランダムに選択し破壊する。この効果は１ターンに１度しか使用できない。
+    自分フィールドの上記カードをデッキに戻した場合のみ、ＥＸデッキから特殊召喚できる。①：１ターンに１度、自分メインフェイズに発動できる。相手の手札をランダムに１枚選んで破壊する。
   ko: |-
-    「E·HERO 네오스」＋「N·마린·돌핀」
-    자신 필드상에 존재하는 상기의 카드를 덱에 되돌렸을 경우만, 융합 덱으로부터 특수 소환이 가능( 「융합」마법 카드는 필요로 하지 않는다). 상대의 패 1매를 랜덤으로 선택해 파괴한다. 이 효과는 1 턴에 1회 밖에 사용할 수 없다.
+    "엘리멘틀 히어로 네오스" ＋ "네오 스페이시언 마린 돌핀"
+    자신 필드 위에 존재하는 상기의 카드를 덱으로 되돌린 경우에만, 융합 덱에서 특수 소환이 가능("융합" 마법 카드는 필요로 하지 않는다). 상대의 패 1장을 무작위로 선택하고 파괴한다. 이 효과는 1턴에 1번밖에 사용할 수 없다.
   zh-TW:
   zh-CN: |-
     「元素英雄 新宇侠」＋「新宇宙侠·海洋海豚」
