--- a/data/cards/25629622.yaml
+++ b/data/cards/25629622.yaml
@@ -12,7 +12,7 @@ name:
   ko: 마계극단－빅 스타
   ko_rr: Magyegeukdan - Bik Seuta
   zh-TW:
-  zh-CN: 魔界剧团－巨星
+  zh-CN: 魔界剧团-巨星
 text:
   en: |-
     When Normal or Special Summoned, your opponent's Spell/Trap Cards and effects cannot be activated. Once per turn: You can Set 1 "Abyss Script" Spell directly from your Deck, but it is sent to the GY during the End Phase.
@@ -32,7 +32,7 @@ text:
     ①: 이 카드의 일반 소환 / 특수 소환 성공시에 상대는 마법 / 함정 카드의 효과를 발동할 수 없다. ②: 1턴에 1번, 자신 메인 페이즈에 발동할 수 있다. 덱에서 "마계대본" 마법 카드 1장을 고르고 자신 필드에 세트한다. 이 효과로 세트한 카드는 엔드 페이즈에 묘지로 보내진다.
   zh-TW:
   zh-CN: |-
-    ①：此卡召唤・特殊召唤成功时，对手不可发动魔法・陷阱卡的效果。②：1回合1次，在自己主要阶段可以发动。从牌组挑选1张"魔界剧本"魔法卡放置在自己场上。以此效果放置的卡会在结束阶段被送至墓地。
+    ①：此卡召唤・特殊召唤成功时，对手不可发动魔法・陷阱卡的效果。②：1回合1次，在自己主要阶段可以发动。从牌组挑选1张“魔界剧本”魔法卡放置在自己场上。以此效果放置的卡会在结束阶段被送至墓地。
 card_type: Monster
 monster_type_line: Fiend / Pendulum / Effect
 attribute: DARK
@@ -59,7 +59,7 @@ pendulum_effect:
     ①: 1턴에 1번, 자신 필드의 "마계극단" 몬스터 1장을 릴리스하고, 자신 묘지의 "마계대본" 마법 카드 1장을 대상으로 하여 발동할 수 있다. 그 카드를 패에 넣는다.
   zh-TW:
   zh-CN: |-
-    ①：1回合1次，可解放自己场上的1只"魔界剧团"怪兽，以自己墓地的1张"魔界剧本"魔法卡为对象发动。将该卡加入手牌。
+    ①：1回合1次，可解放自己场上的1只“魔界剧团”怪兽，以自己墓地的1张“魔界剧本”魔法卡为对象发动。将该卡加入手牌。
 series:
 - Abyss Actor
 images:
