--- a/data/cards/28194325.yaml
+++ b/data/cards/28194325.yaml
@@ -27,9 +27,9 @@ text:
   pt: |-
     Quando este card for Invocado por Invocação-Especial pelo efeito de um monstro "Desafiante Heroico": você pode adicionar 1 monstro "Desafiante Heroico" do seu Deck à sua mão. Você só pode usar o efeito de "Desafiante Heroico - Espada Gancho" uma vez por turno.
   ja: |-
-    このカードが「<ruby>Ｈ<rt>ヒロイック</rt></ruby>・<ruby>Ｃ<rt>チャレンジャー</rt></ruby>」と名のついたモンスターの効果によって特殊召喚に成功した時、デッキから「<ruby>Ｈ<rt>ヒロイック</rt></ruby>・<ruby>Ｃ<rt>チャレンジャー</rt></ruby>」と名のついたモンスター１体を手札に加える事ができる。「<ruby>Ｈ<rt>ヒロイック</rt></ruby>・<ruby>Ｃ<rt>チャレンジャー</rt></ruby> クラスプ・ナイフ」の効果は１ターンに１度しか使用できない。
+    このカード名の効果は１ターンに１度しか使用できない。①：このカードが「Ｈ・Ｃ」モンスターの効果で特殊召喚に成功した時に発動できる。デッキから「Ｈ・Ｃ」モンスター１体を手札に加える。
   ko: |-
-    이 카드가 "H・C(히로익 챌린저)" 라는 이름이 붙은 몬스터의 효과에 의해서 특수 소환에 성공했을 때, 덱에서 "H・C(히로익 챌린저)" 라는 이름이 붙은 몬스터 1장을 패에 넣을 수 있다. "H・C(히로익 챌린저)클래스프 나이프" 의 효과는 1턴에 1번밖에 사용할 수 없다.
+    이 카드가 "H·C(히로익 챌린저)"라는 이름이 붙은 몬스터의 효과에 의해서 특수 소환에 성공했을 때, 덱에서 "H·C(히로익 챌린저)"라는 이름이 붙은 몬스터 1장을 패에 넣을 수 있다. "H·C(히로익 챌린저) 클래스프 나이프"의 효과는 1턴에 1번밖에 사용할 수 없다.
   zh-TW:
   zh-CN: |-
     这张卡用名字带有「英豪挑战者」的怪兽的效果特殊召唤成功时，可以从卡组把1只名字带有「英豪挑战者」的怪兽加入手卡。「英豪挑战者 折刀兵」的效果1回合只能使用1次。
