--- a/data/cards/31643613.yaml
+++ b/data/cards/31643613.yaml
@@ -32,8 +32,7 @@ text:
     이 카드명의 카드는 1턴에 1장밖에 발동할 수 없다. ①: 패에서 "프레데터 플랜츠" 몬스터 1장을 특수 소환한다. 그 후, 덱에서 "프레데터 프랙티스" 이외의 "프레데터" 카드 1장을 패에 넣는다. 이 카드의 발동 후, 턴 종료시까지 자신은 융합 몬스터밖에 엑스트라 덱에서 특수 소환할 수 없다.
   zh-TW:
   zh-CN: |-
-    这个卡名的卡在1回合只能发动1张。
-    ①：从手卡把1只「捕食植物」怪兽特殊召唤。那之后，从卡组把「捕食活动」以外的1张「捕食」卡加入手卡。这张卡的发动后，直到回合结束时自己不是融合怪兽不能从额外卡组特殊召唤。
+    此卡名的卡１回合仅可发动１张。①：从手牌将１只“捕食植物”怪兽特殊召唤。然后从牌组将１张“捕食活动”以外的“捕食”卡加入手牌。此卡发动后，直至回合结束时为止自己从额外牌组仅可特殊召唤融合怪兽。
 card_type: Spell
 property: Normal
 series:
@@ -101,6 +100,11 @@ sets:
     set_name: 'Duelist Pack: Legend Duelist 5'
     rarities:
     - Super Rare
+  zh-CN:
+  - set_number: CL02-SC052
+    set_name: Classic Pack 02
+    rarities:
+    - Common
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
