--- a/data/cards/40318957.yaml
+++ b/data/cards/40318957.yaml
@@ -29,7 +29,7 @@ text:
   ja: |-
     ①：このカードが召喚に成功した時に発動できる。デッキから「ＥＭドクロバット・ジョーカー」以外の「ＥＭ」モンスター、「魔術師」Ｐモンスター、「オッドアイズ」モンスターの内、いずれか１体を手札に加える。
   ko: |-
-    ①: 이 카드가 일반 소환에 성공했을 때에 발동할 수 있다. 덱에서 "EM(엔터메이트) 도크로배트 조커" 이외의 "EM(엔터메이트)" 몬스터, "마술사" 펜듈럼 몬스터, "오드아이즈" 몬스터 중 어느 1장을 패에 넣는다.
+    ①: 이 카드가 일반 소환에 성공했을 때에 발동할 수 있다. 덱에서 "EM(엔터메이트) 도크로배트 조커" 이외의 "EM(엔터메이트)" 몬스터, "마술사" 펜듈럼 몬스터, "오드아이즈" 몬스터 중, 어느 1장을 패에 넣는다.
   zh-TW:
   zh-CN: |-
     ①：此卡召唤成功时可以发动。从牌组"娱乐伙伴 骷髅杂技小丑"以外的"娱乐伙伴"怪兽、"魔术师"灵摆怪兽、"异色眼"怪兽中，挑选任意1只加入手牌。
