--- a/data/cards/60222582.yaml
+++ b/data/cards/60222582.yaml
@@ -27,7 +27,7 @@ text:
   pt: |-
     Se você controlar um monstro "Fóton" ou "Galáxia" de Nível 5 ou mais: Invoque por Invocação-Especial 1 monstro "Fóton" ou "Galáxia" de Nível 5 ou mais do seu Deck em Posição de Defesa. Você só pode ativar 1 "Expedição da Galáxia" por turno.
   ja: |-
-    「銀河遠征」は１ターンに１枚しか発動できない。①：自分フィールドにレベル５以上の、「フォトン」モンスターまたは「ギャラクシー」モンスターが存在する場合に発動できる。デッキからレベル５以上の、「フォトン」モンスターまたは「ギャラクシー」モンスター１体を守備表示で特殊召喚する。
+    このカード名のカードは１ターンに１枚しか発動できない。①：自分フィールドにレベル５以上の、「フォトン」モンスターまたは「ギャラクシー」モンスターが存在する場合に発動できる。デッキからレベル５以上の、「フォトン」モンスターまたは「ギャラクシー」モンスター１体を守備表示で特殊召喚する。
   ko: |-
     "갤럭시 익스페디션"은 1턴에 1장밖에 발동할 수 없다. ①: 자신 필드에 레벨 5 이상인, "포톤" 몬스터 또는 "갤럭시" 몬스터가 존재할 경우에 발동할 수 있다. 덱에서 레벨 5 이상인, "포톤" 몬스터 또는 "갤럭시" 몬스터 1장을 수비 표시로 특수 소환한다.
   zh-TW:
