--- a/data/cards/68007326.yaml
+++ b/data/cards/68007326.yaml
@@ -45,10 +45,10 @@ series:
 images:
 - index: 1
   image: '  GuardianAngelJoan-DT11-JP-DNPR-DT.jpg'
-  illustration: GuardianAngelJoan-TF04-JP-VG.jpg
+  illustration: GuardianAngelJoan-TF05-JP-VG-artwork.png
 - index: '1.1'
   image: GuardianAngelJoan-SBPR-EN-PScR-LE.png
-  illustration: GuardianAngelJoan-TF04-EN-VG.jpg
+  illustration: GuardianAngelJoan-TF04-EN-VG-artwork.png
 sets:
   en:
   - set_number: DR2-EN088
