--- a/data/cards/74218258.yaml
+++ b/data/cards/74218258.yaml
@@ -8,7 +8,7 @@ name:
   it: Tela Metereologica dell'Arcobaleno
   pt: Tela do Clima Arco-íris
   ja: <ruby>虹<rt>にじ</rt></ruby>の<ruby>天<rt>てん</rt></ruby><ruby>気<rt>き</rt></ruby><ruby>模<rt>も</rt></ruby><ruby>様<rt>よう</rt></ruby>
-  ja_romaji: Niji no Tenki Moyō
+  ja_romaji: Niji no Tenkimoyō
   ko: 무지개의 천후모양
   ko_rr: Mujigae-ui Cheonhumoyang
   zh-TW:
