--- a/data/cards/78783370.yaml
+++ b/data/cards/78783370.yaml
@@ -38,10 +38,10 @@ property: Counter
 images:
 - index: 1
   image: '  BarrelBehindtheDoor-EE1-JP-R.jpg    '
-  illustration: BarrelBehindtheDoor-TF04-JP-VG.jpg
+  illustration: BarrelBehindtheDoor-TF05-JP-VG-artwork.png
 - index: '1.1'
   image: BarrelBehindtheDoor-RP02-EN-C-UE.png
-  illustration: BarrelBehindtheDoor-TF04-EN-VG.jpg
+  illustration: BarrelBehindtheDoor-TF04-EN-VG-artwork.png
 sets:
   en:
   - set_number: DR1-EN043
