--- a/data/cards/92746535.yaml
+++ b/data/cards/92746535.yaml
@@ -27,7 +27,7 @@ text:
   pt: |-
     Você não pode Invocar Monstros de Fusão, Sincro ou Xyz por Invocação-Especial usando este card como matéria, exceto monstros "Dracossassino".
   ja: |-
-    このカードを素材として、「竜剣士」モンスター以外の融合・<ruby>Ｓ<rt>シンクロ</rt></ruby>・<ruby>Ｘ<rt>エクシーズ</rt></ruby>モンスターを特殊召喚する事はできない。
+    このカードを素材として、「竜剣士」モンスター以外の融合・Ｓ・Ｘモンスターを特殊召喚する事はできない。
   ko: |-
     이 카드를 소재로서, "룡검사" 몬스터 이외의 융합 / 싱크로 / 엑시즈 몬스터를 특수 소환할 수 없다.
   zh-TW:
@@ -54,7 +54,7 @@ pendulum_effect:
   pt: |-
     Uma vez por turno, se você tiver um card na sua outra Zona de Pêndulo: você pode destruir esse card e, se isso acontecer, adicione 1 card do seu Deck à sua mão, com o mesmo nome que esse card.
   ja: |-
-    ①：１ターンに１度、もう片方の自分の<ruby>Ｐ<rt>ペンデュラム</rt></ruby>ゾーンにカードが存在する場合に発動できる。そのカードを破壊し、そのカードの同名カード１枚をデッキから手札に加える。
+    ①：１ターンに１度、もう片方の自分のＰゾーンにカードが存在する場合に発動できる。そのカードを破壊し、そのカードの同名カード１枚をデッキから手札に加える。
   ko: |-
     ①: 1턴에 1번, 다른 한쪽 자신의 펜듈럼 존에 카드가 존재할 경우에 발동할 수 있다. 그 카드를 파괴하고, 그 카드의 같은 이름의 카드 1장을 덱에서 패에 넣는다.
   zh-TW:
