--- a/data/cards/yugipedia923549.yaml
+++ b/data/cards/yugipedia923549.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN:
 text:
   en: |-
-    Add 1 "Nemurelia" monster from your Deck to your hand, then, if you have a face-up "Dreaming Nemurelia" in your Extra Deck, your opponent cannot activate cards or effects when a "Nemurelia" monster(s) is Normal or Special Summoned this turn. You can place this card from your GY on the bottom of the Deck, then target 1 "Dreaming Nemurelia" you control; add it to your Extra Deck face-up. You can only activate 1 "Sweet Dreams, Nemurelia" per turn.
+    Add 1 "Nemurelia" monster from your Deck to your hand, then, if you have a face-up "Dreaming Nemurelia" in your Extra Deck, your opponent cannot activate cards or effects when a "Nemurelia" monster(s) is Normal or Special Summoned this turn. You can place this card from your GY on the bottom of the Deck, then target 1 "Dreaming Nemurelia" you control; add it to the Extra Deck face-up. You can only activate 1 "Sweet Dreams, Nemurelia" per turn.
   de:
   es:
   fr:
