--- a/data/cards/13662809.yaml
+++ b/data/cards/13662809.yaml
@@ -12,7 +12,7 @@ name:
   ko: 마계대본 "마왕의 강림"
   ko_rr: Magyedaebon "Mawang-ui Gangnim"
   zh-TW:
-  zh-CN: 魔界剧本 "魔王降临"
+  zh-CN: 魔界剧本“魔王降临”
 text:
   en: |-
     Target face-up cards on the field, up to the number of Attack Position "Abyss Actor" monsters with different names you control; destroy them. If you control a Level 7 or higher "Abyss Actor" monster, your opponent cannot activate cards or effects in response to this card's activation. If this Set card in its owner's control is destroyed by an opponent's card effect, and you have a face-up "Abyss Actor" Pendulum Monster in your Extra Deck: You can add up to 2 "Abyss Actor" cards and/or "Abyss Script" Spells with different names from your Deck to your hand.
@@ -32,7 +32,7 @@ text:
     ①: 자신 필드의 공격 표시 "마계극단" 몬스터 종류의 수까지, 필드의 앞면 표시의 카드를 대상으로 하고 발동할 수 있다. 그 카드를 파괴한다. 자신 필드에 레벨 7 이상의 "마계극단" 몬스터가 존재할 경우, 이 카드의 발동에 대하여 상대는 효과를 발동할 수 없다. ②: 자신의 엑스트라 덱에 앞면 표시의 "마계극단" 펜듈럼 몬스터가 존재하고, 세트된 이 카드가 상대 효과로 파괴되었을 경우에 발동할 수 있다. 덱에서 "마계극단" 카드 또는 "마계대본" 마법 카드를 합계 2장까지 패에 넣는다(같은 이름의 카드는 1장까지).
   zh-TW:
   zh-CN: |-
-    ①：可以场上的表侧表示的卡为对象发动，数量最多为自己场上的攻击表示的"魔界剧团"怪兽种类的数量。将该卡破坏。自己场上有等级7以上的"魔界剧团"怪兽存在的情况下，应对此卡的发动对手不可发动效果。②：在自己的额外牌组有表侧表示的"魔界剧团"灵摆怪兽存在、被放置的此卡被对手的效果破坏的情况下可以发动。从牌组将"魔界剧团"卡或"魔界剧本"魔法卡合计最多2张加入手牌（同名卡最多1张）。
+    ①：可以场上的表侧表示的卡为对象发动，数量最多为自己场上的攻击表示的“魔界剧团”怪兽种类的数量。将该卡破坏。自己场上有等级7以上的“魔界剧团”怪兽存在的情况下， 应对此卡的发动对手不可发动效果。②：在自己的额外牌组有表侧表示的“魔界剧团”灵摆怪兽存在、被放置的此卡被对手的效果破坏的情况下可以发动。从牌组将“魔界剧团”卡或“魔界剧本”魔法卡合计最多2张加入手牌（同名卡最多1张）。
 card_type: Spell
 property: Normal
 series:
