--- a/data/cards/14105623.yaml
+++ b/data/cards/14105623.yaml
@@ -8,7 +8,7 @@ name:
   it: Drago Pendulum Arc Occhi Diversi
   pt: Dragão Pêndulo Arc de Olhos Anômalos
   ja: オッドアイズ・アークペンデュラム・ドラゴン
-  ja_romaji: Oddoaizu Ākupendyuramu Doragon
+  ja_romaji: Oddoaizu Āku Pendyuramu Doragon
   ko: 오드아이즈 아크펜듈럼 드래곤
   ko_rr: Odeu-aijeu Akeupendyulleom Deuraegon
   zh-TW:
@@ -55,12 +55,12 @@ pendulum_effect:
   pt: |-
     Se um ou mais cards "Olhos Anômalos" que você controla forem destruídos em batalha ou por um efeito de card: você pode Invocar por Invocação-Especial 1 monstro "Olhos Anômalos" da sua mão, do Deck ou do Cemitério. Você só pode usar este efeito de "Dragão Pêndulo Arc de Olhos Anômalos" uma vez por turno.
   ja: |-
-    このカード名のＰ効果は１ターンに１度しか使用できない。①：自分フィールドの「オッドアイズ」カードが戦闘・効果で破壊された場合に発動できる。自分の手札・デッキ・墓地から「オッドアイズ」モンスター１体を選んで特殊召喚する。
+    このカード名のＰ効果は１ターンに１度しか使用できない。①：自分フィールドの表側表示の「オッドアイズ」カードが戦闘・効果で破壊された場合に発動できる。自分の手札・デッキ・墓地から「オッドアイズ」モンスター１体を選んで特殊召喚する。
   ko: |-
     이 카드명의 펜듈럼 효과는 1턴에 1번밖에 사용할 수 없다. ①: 자신 필드의 앞면 표시의 "오드아이즈" 카드가 전투 / 효과로 파괴되었을 경우에 발동할 수 있다. 자신의 패 / 덱 / 묘지에서 "오드아이즈" 몬스터 1장을 고르고 특수 소환한다.
   zh-TW:
   zh-CN: |-
-    此卡名的灵摆效果1回合仅可使用1次。①：自己场上表侧表示的"异色眼"卡因战斗・效果被破坏的情况下可以发动。从自己的手牌・牌组・墓地挑选1只"异色眼"怪兽特殊召唤。
+    此卡名的灵摆效果1回合仅可使用1次。①：自己场上表侧表示的“异色眼”卡因战斗・效果被破坏的情况下可以发动。从自己的手牌・牌组・墓地挑选1只“异色眼”怪兽特殊召唤。
 series:
 - -Eyes Dragon
 - Odd-Eyes
