--- a/data/cards/16940215.yaml
+++ b/data/cards/16940215.yaml
@@ -27,9 +27,9 @@ text:
   pt: |-
     Quando seu oponente ativar um Card de Magia/Armadilha (Efeito Rápido): você pode oferecer como Tributo 1 monstro "Naturia" e este card; negue a ativação e, se isso acontecer, destrua esse card.
   ja: |-
-    自分フィールド上に存在する、このカードと「ナチュル」と名のついたモンスター１体をリリースして発動する。相手の魔法・罠カードの発動を無効にし破壊する。
+    ①：相手が魔法・罠カードを発動した時、このカードと自分フィールドの「ナチュル」モンスター１体をリリースして発動できる。その発動を無効にし破壊する。
   ko: |-
-    자신 필드 위에 존재하는, 이 카드와 '나츄르' 라는 이름이 붙은 몬스터 1장을 릴리스하고 발동한다. 상대의 마법 / 함정 카드의 발동을 무효로 하고 파괴한다.
+    자신 필드 위에 존재하는, 이 카드와 "나츄르"라는 이름이 붙은 몬스터 1장을 릴리스하고 발동한다. 상대의 마법/함정 카드의 발동을 무효로 하고 파괴한다.
   zh-TW:
   zh-CN: |-
     对方把魔法·陷阱卡发动时，把自己场上1只名字带有「自然」的怪兽和这张卡解放才能发动。那个发动无效并破坏。
