--- a/data/cards/24484270.yaml
+++ b/data/cards/24484270.yaml
@@ -8,7 +8,7 @@ name:
   it: Cavaliere-Gemma Quarzo Fantasma
   pt: Cavaleiro-Gema Quartzo Fantasma
   ja: ジェムナイト・ファントムルーツ
-  ja_romaji: Jemunaito Fantomu Rūtsu
+  ja_romaji: Jemunaito Fantomurūtsu
   ko: 젬나이트 팬텀루츠
   ko_rr:
   zh-TW:
@@ -36,7 +36,7 @@ text:
     このカード名の①②の効果はそれぞれ１ターンに１度しか使用できない。①：このカードがリンク召喚に成功した場合に発動できる。デッキから「ジェムナイト」カード１枚を手札に加える。②：１０００ＬＰを払って発動できる。自分の墓地のカード及び除外されている自分のカードの中から、「ジェムナイト」融合モンスターカードによって決められた融合素材モンスターをデッキに戻し、その融合モンスター１体をＥＸデッキから融合召喚する。この効果で特殊召喚したモンスターはこのターン直接攻撃できない。
   ko: |-
     "젬" 몬스터 2장
-    이 카드명의 ①②의 효과는 1턴에 1번밖에 사용할 수 없다. ① : 이 카드가 링크 소환에 성공했을 경우에 발동할 수 있다. 덱에서 "젬나이트" 카드 1장을 패에 넣는다. ② : 1000LP를 지불하고 발동할 수 있다. 자신의 묘지의 카드 및 제외되어 있는 자신의 카드 중에서, "젬나이트" 융합 몬스터 카드에 쓰여있는 융합 소재 몬스터를 덱으로 되돌리고, 그 융합 몬스터 1장을 엑스트라 덱에서 융합 소환한다. 이 효과로 특수 소환한 몬스터는 이 턴 직접 공격할 수 없다.
+    이 카드명의 ①②의 효과는 각각 1턴에 1번밖에 사용할 수 없다. ①: 이 카드가 링크 소환에 성공했을 경우에 발동할 수 있다. 덱에서 "젬나이트" 카드 1장을 패에 넣는다. ②: 1000 LP를 지불하고 발동할 수 있다. 자신 묘지의 카드 및 제외되어 있는 자신의 카드 중에서, "젬나이트" 융합 몬스터 카드에 기재된 융합 소재 몬스터를 덱으로 되돌리고, 그 융합 몬스터 1장을 엑스트라 덱에서 융합 소환한다. 이 효과로 특수 소환한 몬스터는 이 턴에 직접 공격할 수 없다.
   zh-TW:
   zh-CN: |-
     「宝石」怪兽2只
