--- a/data/cards/27561302.yaml
+++ b/data/cards/27561302.yaml
@@ -8,7 +8,7 @@ name:
   it: Tela Metereologica Piovosa
   pt: Tela do Clima Chuvoso
   ja: <ruby>雨<rt>あめ</rt></ruby>の<ruby>天<rt>てん</rt></ruby><ruby>気<rt>き</rt></ruby><ruby>模<rt>も</rt></ruby><ruby>様<rt>よう</rt></ruby>
-  ja_romaji: Ame no Tenki Moyō
+  ja_romaji: Ame no Tenkimoyō
   ko: 비의 천후모양
   ko_rr:
   zh-TW:
