--- a/data/cards/29888389.yaml
+++ b/data/cards/29888389.yaml
@@ -12,7 +12,7 @@ name:
   ko: 섀도우 리추어
   ko_rr:
   zh-TW:
-  zh-CN: 暗影遗式术师
+  zh-CN: 暗影・咒仪
 text:
   en: |-
     If you Ritual Summon exactly 1 WATER Ritual Monster with a card effect that requires use of monsters, this card can be used as the entire requirement. You can discard this card; add 1 "Gishki" Ritual Spell Card from your Deck to your hand.
@@ -27,12 +27,12 @@ text:
   pt: |-
     Se você invocar por Invocação-Ritual exatamente 1 Monstro de Ritual de ÁGUA com um efeito de card que necessita a utilização de monstros, este card pode ser usado no lugar de todos os monstros necessários. Você pode descartar este card; adicione 1 Card de Magia de Ritual "Gishki" do seu Deck à sua mão.
   ja: |-
-    水属性の儀式モンスターを特殊召喚する場合、このカード１枚で儀式召喚のためのリリースとして使用する事ができる。また、手札からこのカードを捨てる事で、自分のデッキから「リチュア」と名のついた儀式魔法カード１枚を手札に加える。
+    ①：水属性の儀式モンスター１体を儀式召喚する場合、このカード１枚で儀式召喚に必要な分のリリースとして使用できる。②：このカードを手札から捨てて発動できる。デッキから「リチュア」儀式魔法カード１枚を手札に加える。
   ko: |-
-    물 속성의 의식 몬스터를 특수 소환할 경우, 이 카드 1장으로 의식 소환을 위한 릴리스로서 사용할 수 있다. 또한, 패에서 이 카드를 버리는 것으로, 자신의 덱에서 '리추어' 라는 이름이 붙은 의식 마법 카드 1장을 패에 넣는다.
+    물 속성의 의식 몬스터를 특수 소환할 경우, 이 카드 1장으로 의식 소환을 위한 릴리스로 사용할 수 있다. 또한, 패에서 이 카드를 버리는 것으로, 자신의 덱에서 "리추어"라는 이름이 붙은 의식 마법 카드 1장을 패에 넣는다.
   zh-TW:
   zh-CN: |-
-    水属性的仪式怪兽特殊召唤的场合，可以用这1张卡作为仪式召唤的解放使用。此外，从手卡把这张卡丢弃才能发动。从卡组把1张名字带有「遗式」的仪式魔法卡加入手卡。
+    ①：仪式召唤１只水属性仪式怪兽的情况下，使用１张此卡即可作为仪式召唤所必需的解放。②：从手牌舍弃此卡可以发动。从牌组将１张“咒仪”仪式魔法卡加入手牌。
 card_type: Monster
 monster_type_line: Sea Serpent / Effect
 attribute: WATER
@@ -108,6 +108,11 @@ sets:
     set_name: 'Hidden Arsenal 5: Steelswarm Invasion'
     rarities:
     - Super Rare
+  zh-CN:
+  - set_number: CL02-SC076
+    set_name: Classic Pack 02
+    rarities:
+    - Rare
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
