--- a/data/cards/32302078.yaml
+++ b/data/cards/32302078.yaml
@@ -9,7 +9,7 @@ name:
   pt: Sheridan, o Vampiro Dampiro
   ja: <ruby>交血鬼<rt>アルダンピール</rt></ruby>－ヴァンパイア・シェリダン
   ja_romaji: Aru Danpīru - Vanpaia Sheridan
-  ko: 알담피르-뱀파이어 쉐리단
+  ko: 알담피르－뱀파이어 쉐리단
   ko_rr:
   zh-TW:
   zh-CN: 交血鬼－吸血鬼谢里丹
@@ -37,7 +37,7 @@ text:
     元々の持ち主が相手となるモンスターをこのカードのＸ召喚の素材とする場合、そのレベルを６として扱う。①：１ターンに１度、このカードのＸ素材を１つ取り除き、相手フィールドのカード１枚を対象として発動できる。そのカードを墓地へ送る。②：１ターンに１度、フィールドのモンスターカードが、効果で相手の墓地へ送られた場合、または戦闘で破壊され相手の墓地へ送られた場合、このカードのＸ素材を１つ取り除いて発動できる。そのモンスター１体を自分フィールドに守備表示で特殊召喚する。
   ko: |-
     레벨 6 몬스터 × 2장 이상
-    원래의 주인이 상대인 몬스터를 이 카드의 엑시즈 소환의 소재로 할 경우, 그 레벨을 6으로서 취급한다. ①: 1턴에 1번, 이 카드의 엑시즈 소재를 1개 제거하고, 상대 필드의 카드 1장을 대상으로 하여 발동할 수 있다. 그 카드를 묘지로 보낸다. ②: 1턴에 1번, 필드의 몬스터 카드가, 효과로 상대의 묘지로 보내졌을 경우, 또는 전투로 파괴되어 상대의 묘지로 보내졌을 경우, 이 카드의 엑시즈 소재를 1개 제거하고 발동할 수 있다. 그 몬스터 1장을 자신 필드에 수비 표시로 특수 소환한다.
+    원래 주인이 상대가 되는 몬스터를 이 카드의 엑시즈 소환의 소재로 할 경우, 그 레벨을 6 으로 취급한다. ①: 1턴에 1번, 이 카드의 엑시즈 소재를 1개 제거하고, 상대 필드의 카드 1장을 대상으로 하여 발동할 수 있다. 그 카드를 묘지로 보낸다. ②: 1턴에 1번, 필드의 몬스터 카드가, 효과로 상대 묘지로 보내졌을 경우, 또는 전투로 파괴되어 상대 묘지로 보내졌을 경우, 이 카드의 엑시즈 소재를 1개 제거하고 발동할 수 있다. 그 몬스터 1장을 자신 필드에 수비 표시로 특수 소환한다.
   zh-TW:
   zh-CN: |-
     等级6怪兽×2只以上
