--- a/data/cards/33420078.yaml
+++ b/data/cards/33420078.yaml
@@ -27,13 +27,13 @@ text:
   pt: |-
     Se este card estiver no seu Cemitério: você pode colocar 1 card da sua mão no topo do Deck; Invoque este card por Invocação-Especial, mas bana-o quando ele deixar o campo.
   ja: |-
-    ①：このカードが墓地に存在する場合、手札を１枚デッキの一番上に戻して発動できる。このカードを墓地から特殊召喚する。この効果で特殊召喚したこのカードは、フィールドから離れた場合に除外される。
+    ①：このカードが墓地に存在する場合、手札を１枚デッキの一番上に戻して発動できる。このカードを特殊召喚する。この効果で特殊召喚したこのカードは、フィールドから離れた場合に除外される。
   ko: |-
     ①: 이 카드가 묘지에 존재할 경우, 패를 1장 덱의 맨 위로 되돌리고 발동할 수 있다. 이 카드를 묘지에서 특수 소환한다. 이 효과로 특수 소환한 이 카드는, 필드에서 벗어났을 경우에 제외된다.
   zh-TW: |-
     可将1张手牌返回牌组最上方发动。从墓地特殊召唤此卡。以此效果特殊召唤的此卡离开场上的场合，从游戏中除外。
   zh-CN: |-
-    ①：这张卡存在于墓地的情况下，将1张手牌放回牌组最上面后可以发动。从墓地特殊召唤这张卡。用这个效果特殊召唤的这张卡在从场上离开的情况下将被除外。
+    ①：此卡存在于墓地的情况下，将1张手牌放回牌组最上面可以发动。从墓地将此卡特殊召唤。以此效果特殊召唤的此卡离开场上的情况下将被除外。
 card_type: Monster
 monster_type_line: Zombie / Tuner / Effect
 attribute: DARK
