--- a/data/cards/34093683.yaml
+++ b/data/cards/34093683.yaml
@@ -27,7 +27,7 @@ text:
   pt: |-
     Você pode Invocar este card por Invocação-Ritual com qualquer Magia de Ritual "Vendorror". O nome deste card se torna "Assassino Revendorror" enquanto ele estiver no campo. Enquanto este card Invocado por Invocação-Ritual estiver no campo, seu oponente não pode escolher cards que você controla como alvo de efeitos de card, exceto este card. Se este card Invocado por Invocação-Ritual for destruído em batalha ou for destruído por um efeito de card do oponente enquanto estava na Zona de Monstros do seu dono: você pode adicionar 1 card "Vendorror" do seu Deck à sua mão. Você só pode usar este efeito de "Executor Revendorror" uma vez por turno.
   ja: |-
-    「ヴェンデット」儀式魔法カードにより降臨。このカード名の③の効果は１ターンに１度しか使用できない。①：このカードはモンスターゾーンに存在する限り、カード名を「リヴェンデット・スレイヤー」として扱う。②：儀式召喚したこのカードがモンスターゾーンに存在する限り、相手は他の自分フィールドのカードを効果の対象にできない。③：儀式召喚したこのカードが戦闘または相手の効果で破壊された場合に発動できる。デッキから「ヴェンデット」カード１枚を手札に加える。
+    「ヴェンデット」儀式魔法カードにより降臨。このカード名の③の効果は１ターンに１度しか使用できない。①：このカードはモンスターゾーンに存在する限り、カード名を「リヴェンデット・スレイヤー」として扱う。②：儀式召喚したこのカードがモンスターゾーンに存在する限り、自分フィールドの他のカードを相手は効果の対象にできない。③：儀式召喚したこのカードが戦闘または相手の効果で破壊された場合に発動できる。デッキから「ヴェンデット」カード１枚を手札に加える。
   ko: |-
     "벤데드" 의식 마법 카드에 의해 의식 소환. 이 카드명의 ③의 효과는 1턴에 1번밖에 사용할 수 없다. ①: 이 카드는 몬스터 존에 존재하는 한, 카드명을 "리벤데드 슬레이어"로 취급한다. ②: 의식 소환한 이 카드가 몬스터 존에 존재하는 한, 상대는 다른 자신 필드의 카드를 효과의 대상으로 할 수 없다. ③: 의식 소환한 이 카드가 전투 또는 상대 효과로 파괴되었을 경우에 발동할 수 있다. 덱에서 "벤데드" 카드 1장을 패에 넣는다.
   zh-TW:
