--- a/data/cards/47106439.yaml
+++ b/data/cards/47106439.yaml
@@ -12,7 +12,7 @@ name:
   ko: 비전 리추어
   ko_rr:
   zh-TW:
-  zh-CN: 幻影遗式术师
+  zh-CN: 幻影・咒仪
 text:
   en: |-
     If you Ritual Summon exactly 1 WATER Ritual Monster with a card effect that requires use of monsters, this card can be used as the entire requirement. You can discard this card; add 1 "Gishki" Ritual Monster from your Deck to your hand.
@@ -29,10 +29,10 @@ text:
   ja: |-
     ①：水属性の儀式モンスター１体を儀式召喚する場合、このカード１枚で儀式召喚に必要な分のリリースとして使用できる。②：このカードを手札から捨てて発動できる。デッキから「リチュア」儀式モンスター１体を手札に加える。
   ko: |-
-    물 속성의 의식 몬스터를 특수 소환할 경우, 이 카드 1장으로 의식 소환을 위한 릴리스로 사용할 수 있다. 또한, 패에서 이 카드를 버리고 발동할 수 있다. 덱에서 "리추어" 라는 이름이 붙은 의식 몬스터 1장을 패에 넣는다.
+    물 속성의 의식 몬스터를 특수 소환할 경우, 이 카드 1장으로 의식 소환을 위한 릴리스로 사용할 수 있다. 또한, 패에서 이 카드를 버리고 발동할 수 있다. 덱에서 "리추어"라는 이름이 붙은 의식 몬스터 1장을 패에 넣는다.
   zh-TW:
   zh-CN: |-
-    水属性的仪式怪兽特殊召唤的场合，可以用这1张卡作为仪式召唤的解放使用。此外，从手卡把这张卡丢弃才能发动。从卡组把1只名字带有「遗式」的仪式怪兽加入手卡。
+    ①：仪式召唤１只水属性仪式怪兽的情况下，使用１张此卡即可作为仪式召唤所必需的解放。②：从手牌舍弃此卡可以发动。从牌组将１只“咒仪”仪式怪兽加入手牌。
 card_type: Monster
 monster_type_line: Sea Serpent / Effect
 attribute: WATER
@@ -108,6 +108,11 @@ sets:
     set_name: 'Hidden Arsenal 6: Omega Xyz'
     rarities:
     - Super Rare
+  zh-CN:
+  - set_number: CL02-SC079
+    set_name: Classic Pack 02
+    rarities:
+    - Rare
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
