--- a/data/cards/51632798.yaml
+++ b/data/cards/51632798.yaml
@@ -43,10 +43,10 @@ def: 2000
 images:
 - index: 1
   image: '  FusilierDragontheDualModeBeast-SD29-JP-C.png'
-  illustration: '   FusilierDragontheDualModeBeast-TF04-JP-VG.jpg'
+  illustration: '   FusilierDragontheDualModeBeast-TF05-JP-VG-artwork.png'
 - index: '1.1'
   image: FusilierDragontheDualModeBeast-SDMP-EN-C-1E.png
-  illustration: FusilierDragontheDualModeBeast-TF04-EN-VG.png
+  illustration: FusilierDragontheDualModeBeast-TF04-EN-VG-artwork.png
 sets:
   en:
   - set_number: RDS-EN031
