--- a/data/cards/53262004.yaml
+++ b/data/cards/53262004.yaml
@@ -12,7 +12,7 @@ name:
   ko: 오드아이즈 보텍스 드래곤
   ko_rr: Odeu-aijeu Botekseu Deuraegon
   zh-TW:
-  zh-CN: 异色眼风雷龙
+  zh-CN: 异色眼雷涡龙
 text:
   en: |-
     1 "Odd-Eyes" monster + 1 Pendulum Monster
@@ -40,8 +40,8 @@ text:
     "오드아이즈 보텍스 드래곤"의 ①②의 효과는 각각 1턴에 1번밖에 사용할 수 없다. ①: 이 카드가 특수 소환에 성공했을 때, 상대 필드의 앞면 공격 표시 몬스터 1장을 대상으로 하고 발동할 수 있다. 그 몬스터를 주인의 패로 되돌린다. ②: 이 카드 이외의 몬스터의 효과 / 마법 / 함정 카드가 발동했을 때에 발동할 수 있다. 자신의 엑스트라 덱에서 앞면 표시의 펜듈럼 몬스터 1장을 덱으로 되돌리고, 그 발동을 무효로 하여 파괴한다.
   zh-TW:
   zh-CN: |-
-    「异色眼」怪兽＋灵摆怪兽
-    「异色眼风雷龙」的①②的效果1回合各能使用1次。①：这张卡特殊召唤成功时，以对方场上1只表侧攻击表示怪兽为对象才能发动。那只怪兽回到持有者手卡。②：这张卡以外的怪兽的效果·魔法·陷阱卡发动时才能发动。从自己的额外卡组让1只表侧表示的灵摆怪兽回到卡组，那个发动无效并破坏。
+    "异色眼"怪兽＋灵摆怪兽
+    此卡名的①②效果1回合仅可各使用1次。①：此卡特殊召唤成功时，以对手场上的1只表侧攻击表示的怪兽为对象可以发动。将该怪兽放回持有者的手牌。②：此卡以外怪兽的效果・魔法・陷阱卡发动时可以发动。从自己的额外牌组将1只表侧表示灵摆怪兽放回牌组，将该发动无效并破坏。
 card_type: Monster
 monster_type_line: Dragon / Fusion / Effect
 attribute: WIND
@@ -164,6 +164,11 @@ sets:
     - Ultra Rare
     - Secret Rare
     - Ultimate Rare
+  zh-CN:
+  - set_number: SD29-SC045
+    set_name: 'Structure Deck: Master of Pendulum'
+    rarities:
+    - Ultra Rare
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
