--- a/data/cards/53389254.yaml
+++ b/data/cards/53389254.yaml
@@ -36,7 +36,7 @@ text:
     ● Durante sua Fase Principal, se este card estiver no Cemitério porque foi enviado para lá neste turno: você pode banir 1 outro "Asanegra Agressor - Sohaya, a Chuva Tempestuosa" do seu Cemitério; Invoque este card por Invocação-Especial.
   ja: |-
     チューナー＋チューナー以外のモンスター１体以上
-    「Ａ ＢＦ－五月雨のソハヤ」の②③の効果はそれぞれ１ターンに１度しか使用できない。①：「ＢＦ」モンスターを素材としてＳ召喚したこのカードはチューナーとして扱う。②：このカードがＳ召喚に成功した時、自分の墓地の「Ａ ＢＦ」モンスター１体を対象として発動できる。そのモンスターを特殊召喚する。③：このカードが墓地へ送られたターンの自分メインフェイズにこのカード以外の自分の墓地の「Ａ ＢＦ－五月雨のソハヤ」１体を除外して発動できる。このカードを特殊召喚する。
+    このカード名の②③の効果はそれぞれ１ターンに１度しか使用できない。①：「ＢＦ」モンスターを素材としてＳ召喚したこのカードはチューナーとして扱う。②：このカードがＳ召喚に成功した時、自分の墓地の「Ａ ＢＦ」モンスター１体を対象として発動できる。そのモンスターを特殊召喚する。③：このカードが墓地へ送られたターンの自分メインフェイズに、自分の墓地からこのカード以外の「Ａ ＢＦ－五月雨のソハヤ」１体を除外して発動できる。このカードを特殊召喚する。
   ko: |-
     튜너 ＋ 튜너 이외의 몬스터 1장 이상
     "A BF(어썰트 블랙 페더)－오월비의 소하야"의 ②③의 효과는 각각 1턴에 1번밖에 사용할 수 없다. ①: "BF(블랙 페더)" 몬스터를 소재로 하고 싱크로 소환한 이 카드는 튜너로 취급한다. ②: 이 카드가 싱크로 소환에 성공했을 때, 자신 묘지의 "A BF(어썰트 블랙 페더)" 몬스터 1장을 대상으로 하고 발동할 수 있다. 그 몬스터를 특수 소환한다. ③: 이 카드가 묘지로 보내진 턴의 자신 메인 페이즈에 이 카드 이외의 자신 묘지의 "A BF(어썰트 블랙 페더)－오월비의 소하야" 1장을 제외하고 발동할 수 있다. 이 카드를 특수 소환한다.
