--- a/data/cards/54082269.yaml
+++ b/data/cards/54082269.yaml
@@ -34,13 +34,13 @@ text:
     Não é afetado por outros efeitos de cards. Sempre que um monstro do oponente ativar seu efeito, coloque 1 Marcador de Cunha nesse monstro do oponente (máx. 1) depois que esse efeito resolver. Uma vez por turno: você pode escolher 1 monstro que seu oponente controla com um Marcador de Cunha; tome o controle dele. Uma vez por turno, durante sua Fase Final: você pode destruir todos os monstros no campo que tenham um Marcador de Cunha.
   ja: |-
     「ＢＦ」チューナー＋チューナー以外のモンスター１体以上
-    ①：このカードは他のカードの効果を受けない。②：このカードがモンスターゾーンに存在する限り、相手フィールドのモンスターが効果を発動する度に、その相手の表側表示モンスターに楔カウンターを１つ置く（最大１つまで）。③：１ターンに１度、相手フィールドの楔カウンターが置かれたモンスター１体を対象として発動できる。そのモンスターのコントロールを得る。④：自分エンドフェイズに発動できる。フィールドの楔カウンターが置かれたモンスターを全て破壊する。
+    ①：このカードは他のカードの効果を受けない。②：このカードがモンスターゾーンに存在する限り、相手フィールドのモンスターが効果を発動する度に、その相手の表側表示モンスターに楔カウンターを１つ置く（最大１つまで）。③：１ターンに１度、相手フィールドの楔カウンターが置かれているモンスター１体を対象として発動できる。そのモンスターのコントロールを得る。④：自分エンドフェイズに発動できる。楔カウンターが置かれているモンスターを全て破壊する。
   ko: |-
     "BF(블랙 페더)" 튜너 ＋ 튜너 이외의 몬스터 1장 이상
     ①: 이 카드는 다른 카드의 효과를 받지 않는다. ②: 이 카드가 몬스터 존에 존재하는 한, 상대 필드의 몬스터가 효과를 발동할 때마다, 그 상대의 앞면 표시 몬스터에 쐐기 카운터를 1개 놓는다(최대 1개까지). ③: 1턴에 1번, 상대 필드의 쐐기 카운터가 놓여진 몬스터 1장을 대상으로 하고 발동할 수 있다. 그 몬스터의 컨트롤을 얻는다. ④: 자신 엔드 페이즈에 발동할 수 있다. 필드의 쐐기 카운터가 놓여진 몬스터를 전부 파괴한다.
   zh-TW:
   zh-CN: |-
-    “黑羽”协调＋1只以上协调以外的怪兽
+    “黑羽”协调+1只以上协调以外的怪兽
     ①：此卡不受其他卡的效果影响。②：只要此卡存在于怪兽区域，对手场上的怪兽每次发动效果，就在该对手的表侧表示怪兽放1个楔计数物（最多1个）。③：1回合1次，可以对手场上的1只放有楔计数物的怪兽为对象发动。获得该怪兽的控制权。④：在自己的结束阶段可以发动。将场上放有楔计数物的怪兽全部破坏。
 card_type: Monster
 monster_type_line: Winged Beast / Synchro / Effect
