--- a/data/cards/65240384.yaml
+++ b/data/cards/65240384.yaml
@@ -42,10 +42,10 @@ def: 2600
 images:
 - index: 1
   image: BigShieldGardna-G5-JP-ScR.jpg
-  illustration: '   BigShieldGardna-TF04-JP-VG.jpg'
+  illustration: '   BigShieldGardna-GX04-JP-VG-artwork.png'
 - index: 2
   image: BigShieldGardna-LEDD-EN-C-1E.png
-  illustration: BigShieldGardna-TF04-JP-VG-2.jpg
+  illustration: BigShieldGardna-TF05-JP-VG-artwork.png
 sets:
   en:
   - set_number: DB1-EN097
