--- a/data/cards/66023650.yaml
+++ b/data/cards/66023650.yaml
@@ -34,14 +34,14 @@ text:
     Não pode ser usado como Matéria Link. Se este card for Invocado por Invocação-Link: você pode Invocar por Invocação-Especial, do seu Deck e em Posição de Defesa, 1 monstro "de Peluguel" com um Tipo diferente dos 3 monstros usados para a Invocação-Link. Se um ou mais cards que seu oponente controla for destruído em batalha ou por um efeito de card: você pode comprar 1 card e, depois, se você controlar 3 ou mais monstros "de Peluguel" com nomes diferentes, compre 2 cards adicionais. Você só pode usar cada efeito de "Folgo, a Justiça de Peluguel" uma vez por turno.
   ja: |-
     種族が異なるモンスター３体
-    このカード名の①②の効果はそれぞれ１ターンに１度しか使用できない。このカードはリンク素材にできない。①：このカードがリンク召喚に成功した場合に発動できる。そのリンク素材としたモンスター３体とは異なる種族の「空牙団」モンスター１体をデッキから守備表示で特殊召喚する。②：相手フィールドのカードが戦闘・効果で破壊された場合に発動できる。自分はデッキから１枚ドローする。その後、自分フィールドの「空牙団」モンスターが３種類以上の場合、自分はデッキから２枚ドローする。
+    このカードはリンク素材にできない。このカード名の①②の効果はそれぞれ１ターンに１度しか使用できない。①：このカードがリンク召喚に成功した場合に発動できる。そのリンク素材としたモンスター３体とは異なる種族の「空牙団」モンスター１体をデッキから守備表示で特殊召喚する。②：相手フィールドのカードが戦闘・効果で破壊された場合に発動できる。自分はデッキから１枚ドローする。自分フィールドの「空牙団」モンスターが３種類以上の場合、さらに自分はデッキから２枚ドローする。
   ko: |-
     종족이 다른 몬스터 3장
     이 카드명의 ①②의 효과는 각각 1턴에 1번밖에 사용할 수 없다. 이 카드는 링크 소재로 할 수 없다. ①: 이 카드가 링크 소환에 성공했을 경우에 발동할 수 있다. 그 링크 소재로 한 몬스터 3장과는 다른 종족의 "공아단" 몬스터 1장을 덱에서 수비 표시로 특수 소환한다. ②: 상대 필드의 카드가 전투 / 효과로 파괴되었을 경우에 발동할 수 있다. 자신은 덱에서 1장 드로우한다. 그 후, 자신 필드의 "공아단" 몬스터가 3종류 이상일 경우, 자신은 덱에서 2장 드로우한다.
   zh-TW:
   zh-CN: |-
     种族不同的怪兽3只
-    此卡名的①②效果1回合仅可各使用1次。此卡不可作为连接素材。①：此卡连接召唤成功的情况下可以发动。将与作为连接素材的3只怪兽种族不同的1只“空牙团”怪兽从牌组以守备表示特殊召唤。②：对手场上的卡被战斗・效果破坏的情况下可发动。自己从牌组抽1张。然后，自己场上的“空牙团”怪兽有3种以上的情况下，自己从牌组抽2张。
+    此卡名的①②效果1回合仅可各使用1次。此卡不可作为连接素材。①：此卡连接召唤成功的情况下可以发动。将与作为该连接素材的3只怪兽种族不同的1只“空牙团”怪兽从牌组以守备表示特殊召唤。②：对手场上的卡被战斗・效果破坏的情况下可以发动。自己从牌组抽1张。然后，自己场上的“空牙团”怪兽有3种以上的情况下，自己从牌组抽2张。
 card_type: Monster
 monster_type_line: Beast / Link / Effect
 attribute: DARK
