--- a/data/cards/67111213.yaml
+++ b/data/cards/67111213.yaml
@@ -27,12 +27,12 @@ text:
   pt: |-
     Quando este card for Invocado: você pode adicionar 1 monstro "Gishki" com 1000 ou menos de DEF do seu Deck à sua mão, exceto "Abismo Gishki".
   ja: |-
-    このカードが召喚・反転召喚・特殊召喚に成功した時、自分のデッキから「リチュア・アビス」以外の守備力１０００以下の「リチュア」と名のついたモンスター１体を手札に加える事ができる。
+    ①：このカードが召喚・反転召喚・特殊召喚に成功した時に発動できる。デッキから「リチュア・アビス」以外の守備力１０００以下の「リチュア」モンスター１体を手札に加える。
   ko: |-
-    이 카드가 일반 소환 / 반전 소환 / 특수 소환에 성공했을 때, 자신의 덱에서 '리추어 어비스' 이외의 수비력 1000 이하의 '리추어' 라는 이름이 붙은 몬스터 1장을 패에 넣을 수 있다.
+    이 카드가 일반 소환 / 반전 소환 / 특수 소환에 성공했을 때, 자신의 덱에서 "리추어 어비스" 이외의 수비력 1000 이하의 "리추어"라는 이름이 붙은 몬스터 1장을 패에 넣을 수 있다.
   zh-TW:
   zh-CN: |-
-    ①：此卡召唤・反转召唤・特殊召唤成功时可以发动。从牌组将"咒仪・邃渊"以外的1只守备力1000以下"咒仪"怪兽加入手牌。
+    ①：此卡召唤・反转召唤・特殊召唤成功时可以发动。从牌组将“咒仪・邃渊”以外的１只守备力１０００以下“咒仪”怪兽加入手牌。
 card_type: Monster
 monster_type_line: Fish / Effect
 attribute: WATER
