--- a/data/cards/71734607.yaml
+++ b/data/cards/71734607.yaml
@@ -32,7 +32,7 @@ text:
     이 카드명의 ①②의 효과는 각각 1턴에 1번밖에 사용할 수 없다. ①: 자신 메인 페이즈에 발동할 수 있다. 덱에서 "육화의 한 조각" 이외의 "육화" 몬스터 1장을 고르고, 패에 넣거나 묘지로 보낸다. 이 효과의 발동 후, 턴 종료시까지 자신은 식물족 몬스터밖에 특수 소환할 수 없다. ②: 이 카드가 묘지에 존재하고, 자신 필드에 몬스터가 존재하지 않을 경우, 또는 자신 필드의 몬스터가 식물족 몬스터뿐일 경우, 상대 엔드 페이즈에 발동할 수 있다. 이 카드를 특수 소환한다.
   zh-TW:
   zh-CN: |-
-    此卡名的①②效果1回合仅可各使用1次。①：自己的主要阶段可以发动。从牌组挑选“六花的一瓣”以外的1只“六花”怪兽加入手牌或送至墓地。此效果发动后，直到回合结束时为止自己只可特殊召唤植物族怪兽。②：此卡存在于墓地，且自己场上不存在怪兽的情况下，或者自己场上的怪兽全都是植物族怪兽的情况下，可以在对手的结束阶段发动。将此卡特殊召唤。
+    此卡名的①②效果1回合仅可各使用1次。①：自己的主要阶段可以发动。从牌组挑选“六花的一瓣”以外的1只“六花”怪兽加入手牌或送至墓地。此效果发动后，直到回合结束时为止自己只可特殊召唤植物族怪兽。②：此卡存在于墓地、且自己场上不存在怪兽的情况下，或者自己场上的怪兽全都是植物族怪兽的情况下，可以在对手的结束阶段发动。将此卡特殊召唤。
 card_type: Monster
 monster_type_line: Plant / Effect
 attribute: WATER
