--- a/data/cards/79864860.yaml
+++ b/data/cards/79864860.yaml
@@ -46,14 +46,14 @@ text:
     ● Se seu oponente controlar um monstro com um ou mais Marcadores de Predador: você pode Invocar este card por Invocação-Especial do seu Cemitério em Posição de Defesa.
   ja: |-
     フィールドの闇属性モンスター×３
-    このカード名の②③の効果はそれぞれ１ターンに１度しか使用できない。①：このカードの攻撃力は、このカード以外のフィールドの捕食カウンターが置かれたモンスターの元々の攻撃力の合計分アップする。②：このカードが融合召喚されている場合、相手がＥＸデッキからモンスターを特殊召喚する際に発動できる。その特殊召喚を無効にし、そのモンスターを破壊する。③：相手フィールドのモンスターに捕食カウンターが置かれている場合に発動できる。このカードを墓地から守備表示で特殊召喚する。
+    このカード名の②③の効果はそれぞれ１ターンに１度しか使用できない。①：このカードの攻撃力は、このカード以外の捕食カウンターが置かれているモンスターの元々の攻撃力の合計分アップする。②：このカードが融合召喚されている場合、相手がＥＸデッキからモンスターを特殊召喚する際に発動できる。その特殊召喚を無効にし、そのモンスターを破壊する。③：相手フィールドのモンスターに捕食カウンターが置かれている場合に発動できる。このカードを墓地から守備表示で特殊召喚する。
   ko: |-
     필드의 어둠 속성 몬스터 × 3
     이 카드명의 ②③의 효과는 각각 1턴에 1번밖에 사용할 수 없다. ①: 이 카드의 공격력은, 이 카드 이외의 필드의 포식 카운터가 놓여진 몬스터의 원래 공격력의 합계만큼 올린다. ②: 이 카드가 융합 소환되어 있을 경우, 상대가 엑스트라 덱에서 몬스터를 특수 소환할 시기에 발동할 수 있다. 그 특수 소환을 무효로 하고, 그 몬스터를 파괴한다. ③: 상대 필드의 몬스터에 포식 카운터가 놓여 있을 경우에 발동할 수 있다. 이 카드를 묘지에서 수비 표시로 특수 소환한다.
   zh-TW:
   zh-CN: |-
-    场上的暗属性怪兽×3
-    此卡名的②③效果1回合仅可各使用1次。①：此卡的攻击力上升相当于场上此卡以外放有捕食计数物的怪兽的原本攻击力合计的数值。②：此卡是被融合召唤的情况下，对手从额外牌组特殊召唤怪兽之际可以发动。将该特殊召唤无效，将该怪兽破坏。③：对手场上的怪兽上放有捕食计数物的情况下可以发动。将此卡从墓地以守备表示特殊召唤。
+    场上的暗属性怪兽×３
+    此卡名的②③效果１回合仅可各使用１次。①：此卡的攻击力上升相当于场上此卡以外放有捕食计数物的怪兽的原本攻击力合计的数值。②：此卡是被融合召唤的情况下，对手从额外牌组特殊召唤怪兽之际可以发动。将该特殊召唤无效，将该怪兽破坏。③：对手场上的怪兽上放有捕食计数物的情况下可以发动。将此卡从墓地以守备表示特殊召唤。
 card_type: Monster
 monster_type_line: Plant / Fusion / Effect
 attribute: DARK
