--- a/data/cards/80577258.yaml
+++ b/data/cards/80577258.yaml
@@ -8,7 +8,7 @@ name:
   it: Tela Metereologica Nevosa
   pt: Tela do Clima Nevoso
   ja: <ruby>雪<rt>ゆき</rt></ruby>の<ruby>天<rt>てん</rt></ruby><ruby>気<rt>き</rt></ruby><ruby>模<rt>も</rt></ruby><ruby>様<rt>よう</rt></ruby>
-  ja_romaji: Yuki no Tenki Moyō
+  ja_romaji: Yuki no Tenkimoyō
   ko: 눈의 천후모양
   ko_rr:
   zh-TW:
@@ -41,7 +41,7 @@ text:
   ja: |-
     ①：「雪の天気模様」は自分フィールドに１枚しか表側表示で存在できない。②：このカードと同じ縦列の自分のメインモンスターゾーン及びその両隣の自分のメインモンスターゾーンに存在する「天気」効果モンスターは以下の効果を得る。●このカードを除外して発動できる。デッキから「天気」カード１枚を手札に加える。この効果の発動後、ターン終了時まで自分はドロー以外の方法でデッキからカードを手札に加える事はできない。この効果は相手ターンでも発動できる。
   ko: |-
-    ① : "눈의 천후모양"은 자신 필드에 1장밖에 앞면 표시로 존재할 수 없다. ② : 이 카드와 같은 세로열인 자신 메인 몬스터 존 및 그 양옆의 자신 메인 몬스터 존에 존재하는 "천후" 효과 몬스터는 이하의 효과를 얻는다. ● 이 카드를 제외하고 발동할 수 있다. 덱에서 "천후" 카드 1장을 패에 넣는다. 이 효과의 발동후, 턴 종료시까지 자신은 드로우 이외의 방법으로 덱에서 카드를 패에 넣을 수 없다. 이 효과는 상대 턴에도 발동할 수 있다.
+    ①: "눈의 천후모양"은 자신 필드에 1장밖에 앞면 표시로 존재할 수 없다. ②: 이 카드와 같은 세로열인 자신 메인 몬스터 존 및 그 양옆의 자신 메인 몬스터 존에 존재하는 "천후" 효과 몬스터는 이하의 효과를 얻는다. ●이 카드를 제외하고 발동할 수 있다. 덱에서 "천후" 카드 1장을 패에 넣는다. 이 효과의 발동 후, 턴 종료시까지 자신은 드로우 이외의 방법으로 덱에서 카드를 패에 넣을 수 없다. 이 효과는 상대 턴에도 발동할 수 있다.
   zh-TW:
   zh-CN: |-
     ①：「雪之天气模样」在自己场上只能有1张表侧表示存在。②：和这张卡相同纵列的自己的主要怪兽区域以及那些两邻的自己的主要怪兽区域存在的「天气」效果怪兽得到以下效果。
