--- a/data/cards/81105204.yaml
+++ b/data/cards/81105204.yaml
@@ -12,7 +12,7 @@ name:
   ko: <ruby>BF<rt>블랙 페더</rt></ruby>－잔야의 크리스
   ko_rr:
   zh-TW:
-  zh-CN: 黑羽－残夜之酷利斯
+  zh-CN: 黑羽-残夜之酷利斯
 text:
   en: |-
     If you control a "Blackwing" monster other than "Blackwing - Kris the Crack of Dawn", you can Special Summon this card (from your hand). You can only Special Summon "Blackwing - Kris the Crack of Dawn" once per turn this way. Once per turn, this card cannot be destroyed by Spell/Trap effects.
@@ -27,12 +27,12 @@ text:
   pt: |-
     Se você controlar um monstro "Asanegra" diferente de "Asanegra - Kris, a Luz do Amanhecer", você pode Invocar este card por Invocação-Especial (da sua mão). Você só pode Invocar "Asanegra - Kris, a Luz do Amanhecer" por Invocação-Especial uma vez por turno desta forma. Uma vez por turno, este card não pode ser destruído por efeitos de Magia/Armadilha.
   ja: |-
-    「ＢＦ－残夜のクリス」の①の方法による特殊召喚は１ターンに１度しかできない。①：自分フィールドに「ＢＦ－残夜のクリス」以外の「ＢＦ」モンスターが存在する場合、このカードは手札から特殊召喚できる。②：このカードは１ターンに１度だけ、魔法・罠カードの効果では破壊されない。
+    このカード名の①の方法による特殊召喚は１ターンに１度しかできない。①：自分フィールドに「ＢＦ－残夜のクリス」以外の「ＢＦ」モンスターが存在する場合、このカードは手札から特殊召喚できる。②：フィールドのこのカードは１ターンに１度だけ、魔法・罠カードの効果では破壊されない。
   ko: |-
     "BF(블랙 페더)－잔야의 크리스"의 ①의 방법에 의한 특수 소환은 1턴에 1번밖에 할 수 없다. ①: 자신 필드에 "BF(블랙 페더)－잔야의 크리스" 이외의 "BF(블랙 페더)" 몬스터가 존재할 경우, 이 카드는 패에서 특수 소환할 수 있다. ②: 이 카드는 1턴에 1번만, 마법 / 함정 카드의 효과로는 파괴되지 않는다.
   zh-TW:
   zh-CN: |-
-    此卡名以①方法的特殊召唤1回合仅可进行1次。①：自己场上有"黑羽－残夜之酷利斯"以外的"黑羽"怪兽存在的情况下，此卡可从手牌中特殊召唤。②：1回合仅1次，此卡不会因魔法・陷阱卡的效果被破坏。
+    此卡名以①方法的特殊召唤1回合仅可进行1次。①：自己场上有“黑羽-残夜之酷利斯”以外的“黑羽”怪兽存在的情况下，此卡可从手牌中特殊召唤。②：1回合仅1次，此卡不会因魔法・陷阱卡的效果被破坏。
 card_type: Monster
 monster_type_line: Winged Beast / Effect
 attribute: DARK
