--- a/data/cards/89355716.yaml
+++ b/data/cards/89355716.yaml
@@ -8,7 +8,7 @@ name:
   it: Tela Metereologica Soleggiata
   pt: Tela do Clima Ensolarado
   ja: <ruby>晴<rt>は</rt></ruby>れの<ruby>天<rt>てん</rt></ruby><ruby>気<rt>き</rt></ruby><ruby>模<rt>も</rt></ruby><ruby>様<rt>よう</rt></ruby>
-  ja_romaji: Hare no Tenki Moyō
+  ja_romaji: Hare no Tenkimoyō
   ko: 맑음의 천후모양
   ko_rr:
   zh-TW:
