--- a/data/cards/94183877.yaml
+++ b/data/cards/94183877.yaml
@@ -32,7 +32,7 @@ text:
     이 카드명의 ③의 효과는 1턴에 1번밖에 사용할 수 없다. ①: "제너레이드 섀도우 로프톨"은 자신 필드에 1장밖에 앞면 표시로 존재할 수 없다. ②: 자신 필드의 "제너레이드" 몬스터의 공격력 / 수비력은 상대 턴 동안 1000 올린다. ③: 자신 / 상대의 메인 페이즈에, 자신 필드의 "제너레이드" 몬스터 1장을 릴리스하고 발동할 수 있다. 그 몬스터와는 카드명이 다른 레벨 9 의 "제너레이드" 몬스터 1장을 덱에서 특수 소환한다.
   zh-TW:
   zh-CN: |-
-    此卡名的③效果1回合仅可使用1次。①："创王之影 洛普托尔"在自己场上仅可有1只以表侧表示存在。②：自己场上的"创王"怪兽的攻击力・守备力在对手回合期间上升1000。③：在自己・对手的主要阶段，解放自己场上的1只"创王"怪兽可以发动。将1只与该怪兽卡名不同的等级9"创王"怪兽从牌组特殊召唤。
+    此卡名的③效果1回合仅可使用1次。①：“创王之影 洛普托尔”在自己场上仅可有1只以表侧表示存在。②：自己场上的“创王”怪兽的攻击力・守备力在对手回合期间上升1000。③：在自己・对手的主要阶段，解放自己场上的1只“创王”怪兽可以发动。将1只与该怪兽卡名不同的等级9“创王”怪兽从牌组特殊召唤。
 card_type: Monster
 monster_type_line: Fairy / Effect
 attribute: FIRE
