--- a/data/cards/99795159.yaml
+++ b/data/cards/99795159.yaml
@@ -27,9 +27,9 @@ text:
   pt: |-
     Os monstros não podem atacar monstros com a face para baixo em Posição de Defesa, mas podem atacar diretamente o oponente se todos os monstros que ele controla estiverem com a face para baixo em Posição de Defesa. Todo dano de efeito e dano de batalha causado por monstros que não sejam "Fantardil" é diminuído pela metade.
   ja: |-
-    このカードがフィールド上に存在する限り、お互いのフィールド上のモンスターは、裏側守備表示のモンスターに攻撃できず、相手フィールド上のモンスターが裏側守備表示のモンスターのみの場合、相手プレイヤーに直接攻撃できる。また、このカードがフィールド上に存在する限り、お互いのプレイヤーが受ける効果ダメージ及び、「ゴーストリック」と名のついたモンスター以外のモンスターがプレイヤーに与える戦闘ダメージは半分になる。
+    ①：このカードがフィールドゾーンに存在する限り、お互いのモンスターは、裏側守備表示モンスターに攻撃できず、相手フィールドのモンスターが裏側守備表示モンスターのみの場合、相手に直接攻撃できる。②：このカードがフィールドゾーンに存在する限り、お互いが受ける効果ダメージは半分になり、「ゴーストリック」モンスター以外のモンスターはプレイヤーに与える戦闘ダメージが半分になる。
   ko: |-
-    이 카드가 필드 위에 존재하는 한, 서로의 필드 위 몬스터는 뒷면 수비 표시의 몬스터에 공격할 수 없고, 상대 필드 위 몬스터가 뒷면 수비 표시의 몬스터뿐일 경우, 상대 플레이어에게 직접 공격할 수 있다. 또한, 이 카드가 필드 위에 존재하는 한, 양쪽 플레이어가 받는 효과 데미지 및, "고스트릭" 이라는 이름이 붙은 몬스터 이외의 몬스터가 플레이어에게 주는 전투 데미지는 절반이 된다.
+    이 카드가 필드 위에 존재하는 한, 서로의 필드 위 몬스터는 뒷면 수비 표시의 몬스터에 공격할 수 없고, 상대 필드 위 몬스터가 뒷면 수비 표시의 몬스터뿐일 경우, 상대 플레이어에게 직접 공격할 수 있다. 또한, 이 카드가 필드 위에 존재하는 한, 양쪽 플레이어가 받는 효과 데미지 및, "고스트릭"이라는 이름이 붙은 몬스터 이외의 몬스터가 플레이어게 주는 전투 데미지는 절반이 된다.
   zh-TW:
   zh-CN: |-
     只要这张卡在场上存在，双方场上的怪兽不能向里侧守备表示怪兽攻击，可以在对方场上的怪兽只有里侧守备表示怪兽的场合直接攻击对方玩家。此外，只要这张卡在场上存在，双方玩家受到的效果伤害以及名字带有「鬼计」的怪兽以外的怪兽给与玩家的战斗伤害变成一半。
