--- a/data/cards/54082269.yaml
+++ b/data/cards/54082269.yaml
@@ -8,7 +8,7 @@ name:
   it: Maestro Armatura Completa Alanera
   pt: Mestre de Armadura Completa Asanegra
   ja: <ruby>ＢＦ<rt>ブラックフェザー</rt></ruby>－フルアーマード・ウィング
-  ja_romaji: Burakku Fezā - Furu Āmādo Wingu
+  ja_romaji: Burakku Fezā - Furuāmādo Wingu
   ko: <ruby>BF<rt>블랙 페더</rt></ruby>－풀아머드 윙
   ko_rr: Beullaek Pedeo - Pulameodeu Wing
   zh-TW:
