--- a/data/rush/16991.yaml
+++ b/data/rush/16991.yaml
@@ -14,7 +14,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    Shuffle 1 "Hot-Blooded Spirits Stadium" from your Graveyard into the Deck.
+    Shuffle 1 "Feverous Spirit Stadium" from your Graveyard into the Deck.
   de:
   es:
   fr:
