--- a/data/rush/16992.yaml
+++ b/data/rush/16992.yaml
@@ -14,7 +14,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    If a face-up "Hot-Blooded Spirits Stadium" is on the field, pay 500 LP.
+    If a face-up "Feverous Spirit Stadium" is on the field, pay 500 LP.
   de:
   es:
   fr:
