--- a/data/rush/16993.yaml
+++ b/data/rush/16993.yaml
@@ -1,6 +1,6 @@
 konami_id: 16993
 name:
-  en: 'Uniform No. 39: Junior Baseball King, Home'
+  en: 'Player #39: Home Run Hitter'
   de:
   es:
   fr:
@@ -14,7 +14,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    If a face-up "Hot-Blooded Spirits Stadium" is on the field, send 2 face-up Level 4 FIRE Attribute monsters from your field to the Graveyard.
+    If a face-up "Feverous Spirit Stadium" is on the field, send 2 face-up Level 4 FIRE Attribute monsters from your field to the Graveyard.
   de:
   es:
   fr:
@@ -50,7 +50,7 @@ series:
 - Baseball
 images:
 - index: 1
-  image: UniformNo39JuniorBaseballKingHome-RDKP07-JP-UR.png
+  image: Player39HomeRunHitter-RDKP07-JP-UR.png
 sets:
   ja:
   - set_number: RD/KP07-JP028
