--- a/data/rush/17026.yaml
+++ b/data/rush/17026.yaml
@@ -1,6 +1,6 @@
 konami_id: 17026
 name:
-  en: Request 9
+  en: Requesting 9
   de:
   es:
   fr:
@@ -28,7 +28,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Gain 900 LP. Then, if you have 9 or more FIRE Attribute monsters in your Graveyard, you can Special Summon 1 "Uniform No. 39: Junior Baseball King, Home" or "Uniform No. 99: Junior Baseball King Dragon, Home Grandra" from your Graveyard face-up to your field.
+    Gain 900 LP. Then, if you have 9 or more FIRE Attribute monsters in your Graveyard, you can Special Summon 1 "Player #39: Home Run Hitter" or "Uniform No. 99: Junior Baseball King Dragon, Home Grandra" from your Graveyard face-up to your field.
   de:
   es:
   fr:
@@ -46,7 +46,7 @@ series:
 - Baseball
 images:
 - index: 1
-  image: Request9-RDKP07-JP-C.png
+  image: Requesting9-RDKP07-JP-C.png
 sets:
   ja:
   - set_number: RD/KP07-JP061
