--- a/data/rush/16994.yaml
+++ b/data/rush/16994.yaml
@@ -28,7 +28,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Special Summon 1 "Uniform No. 39: Junior Baseball King, Home" from your Graveyard face-up to your field, then this card gains 2000 ATK until the end of this turn.
+    Special Summon 1 "Player #39: Home Run Hitter" from your Graveyard face-up to your field, then this card gains 2000 ATK until the end of this turn.
   de:
   es:
   fr:
