--- a/data/rush/17013.yaml
+++ b/data/rush/17013.yaml
@@ -1,6 +1,6 @@
 konami_id: 17013
 name:
-  en: Hot-Blooded Spirits Stadium
+  en: Feverous Spirit Stadium
   de:
   es:
   fr:
@@ -46,7 +46,7 @@ series:
 - Baseball
 images:
 - index: 1
-  image: HotBloodedSpiritsStadium-RDKP07-JP-R.png
+  image: FeverousSpiritStadium-RDKP07-JP-R.png
 sets:
   ja:
   - set_number: RD/KP07-JP047
