--- a/data/rush/17025.yaml
+++ b/data/rush/17025.yaml
@@ -28,7 +28,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Special Summon 1 FIRE Attribute monster from your Graveyard to your field in face-up Defense Position. Then, if you Special Summoned "Uniform No. 39: Junior Baseball King, Home" or "Uniform No. 99: Junior Baseball King Dragon, Home Grandra" by this effect, you can destroy 1 monster on your opponent's field.
+    Special Summon 1 FIRE Attribute monster from your Graveyard to your field in face-up Defense Position. Then, if you Special Summoned "Player #39: Home Run Hitter" or "Uniform No. 99: Junior Baseball King Dragon, Home Grandra" by this effect, you can destroy 1 monster on your opponent's field.
   de:
   es:
   fr:
