--- a/rush.yaml
+++ b/rush.yaml
@@ -47867,7 +47867,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    Shuffle 1 "Hot-Blooded Spirits Stadium" from your Graveyard into the Deck.
+    Shuffle 1 "Feverous Spirit Stadium" from your Graveyard into the Deck.
   de:
   es:
   fr:
@@ -47933,7 +47933,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    If a face-up "Hot-Blooded Spirits Stadium" is on the field, pay 500 LP.
+    If a face-up "Feverous Spirit Stadium" is on the field, pay 500 LP.
   de:
   es:
   fr:
@@ -47985,7 +47985,7 @@ yugipedia_page_id: 829597
 ---
 konami_id: 16993
 name:
-  en: 'Uniform No. 39: Junior Baseball King, Home'
+  en: 'Player #39: Home Run Hitter'
   de:
   es:
   fr:
@@ -47999,7 +47999,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    If a face-up "Hot-Blooded Spirits Stadium" is on the field, send 2 face-up Level 4 FIRE Attribute monsters from your field to the Graveyard.
+    If a face-up "Feverous Spirit Stadium" is on the field, send 2 face-up Level 4 FIRE Attribute monsters from your field to the Graveyard.
   de:
   es:
   fr:
@@ -48035,7 +48035,7 @@ series:
 - Baseball
 images:
 - index: 1
-  image: UniformNo39JuniorBaseballKingHome-RDKP07-JP-UR.png
+  image: Player39HomeRunHitter-RDKP07-JP-UR.png
 sets:
   ja:
   - set_number: RD/KP07-JP028
@@ -48079,7 +48079,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Special Summon 1 "Uniform No. 39: Junior Baseball King, Home" from your Graveyard face-up to your field, then this card gains 2000 ATK until the end of this turn.
+    Special Summon 1 "Player #39: Home Run Hitter" from your Graveyard face-up to your field, then this card gains 2000 ATK until the end of this turn.
   de:
   es:
   fr:
@@ -49412,7 +49412,7 @@ yugipedia_page_id: 831714
 ---
 konami_id: 17013
 name:
-  en: Hot-Blooded Spirits Stadium
+  en: Feverous Spirit Stadium
   de:
   es:
   fr:
@@ -49458,7 +49458,7 @@ series:
 - Baseball
 images:
 - index: 1
-  image: HotBloodedSpiritsStadium-RDKP07-JP-R.png
+  image: FeverousSpiritStadium-RDKP07-JP-R.png
 sets:
   ja:
   - set_number: RD/KP07-JP047
@@ -50182,7 +50182,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Special Summon 1 FIRE Attribute monster from your Graveyard to your field in face-up Defense Position. Then, if you Special Summoned "Uniform No. 39: Junior Baseball King, Home" or "Uniform No. 99: Junior Baseball King Dragon, Home Grandra" by this effect, you can destroy 1 monster on your opponent's field.
+    Special Summon 1 FIRE Attribute monster from your Graveyard to your field in face-up Defense Position. Then, if you Special Summoned "Player #39: Home Run Hitter" or "Uniform No. 99: Junior Baseball King Dragon, Home Grandra" by this effect, you can destroy 1 monster on your opponent's field.
   de:
   es:
   fr:
@@ -50216,7 +50216,7 @@ yugipedia_page_id: 829595
 ---
 konami_id: 17026
 name:
-  en: Request 9
+  en: Requesting 9
   de:
   es:
   fr:
@@ -50244,7 +50244,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Gain 900 LP. Then, if you have 9 or more FIRE Attribute monsters in your Graveyard, you can Special Summon 1 "Uniform No. 39: Junior Baseball King, Home" or "Uniform No. 99: Junior Baseball King Dragon, Home Grandra" from your Graveyard face-up to your field.
+    Gain 900 LP. Then, if you have 9 or more FIRE Attribute monsters in your Graveyard, you can Special Summon 1 "Player #39: Home Run Hitter" or "Uniform No. 99: Junior Baseball King Dragon, Home Grandra" from your Graveyard face-up to your field.
   de:
   es:
   fr:
@@ -50262,7 +50262,7 @@ series:
 - Baseball
 images:
 - index: 1
-  image: Request9-RDKP07-JP-C.png
+  image: Requesting9-RDKP07-JP-C.png
 sets:
   ja:
   - set_number: RD/KP07-JP061
@@ -56525,7 +56525,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Add up to 2 "Hot-Blooded Spirits Stadium" and/or "Tag-Up-Magic Sacrifice Force" from your Graveyard to your hand.
+    Add up to 2 "Feverous Spirit Stadium" and/or "Tag-Up-Magic Sacrifice Force" from your Graveyard to your hand.
   de:
   es:
   fr:
