--- a/rush.yaml
+++ b/rush.yaml
@@ -87278,3 +87278,54 @@ sets:
     rarities:
     - Common
 yugipedia_page_id: 923541
+---
+konami_id:
+name:
+  en: Ether Escape
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: エーテル・エスケープ
+  ja_romaji: Ēteru Esukēpu
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    When your opponent Normal Summons a Level 7 or higher monster, shuffle 2 Warrior and/or Machine Type monsters from your Graveyard into the Deck.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    Change that Normal Summoned monster to face-down Defense Position. Then, if you have a face-up Fusion Monster on your field, you can place 1 face-down card from your opponent's field on top of the owner's Deck.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Trap
+property: Normal
+images:
+- index: 1
+  image: EtherEscape-RDKP12-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/KP12-JP062
+    set_name: 'Deck Mod Pack: Double Star of the Assault!!'
+    rarities:
+    - Rare
+yugipedia_page_id: 925704
