--- a/data/cards/yugipedia916169.yaml
+++ b/data/cards/yugipedia916169.yaml
@@ -42,6 +42,7 @@ sets:
   - set_number: CYAC-JP005
     set_name: Cyberstorm Access
     rarities:
+    - Common
 limit_regulation:
   tcg: Not yet released
   ocg: Not yet released
