--- a/data/cards/yugipedia916160.yaml
+++ b/data/cards/yugipedia916160.yaml
@@ -56,6 +56,9 @@ sets:
   - set_number: CYAC-JP040
     set_name: Cyberstorm Access
     rarities:
+    - Super Rare
+    - Secret Rare
+    - Prismatic Secret Rare
 limit_regulation:
   tcg: Not yet released
   ocg: Not yet released
