--- a/data/cards/yugipedia916166.yaml
+++ b/data/cards/yugipedia916166.yaml
@@ -54,6 +54,9 @@ sets:
   - set_number: CYAC-JP006
     set_name: Cyberstorm Access
     rarities:
+    - Super Rare
+    - Secret Rare
+    - Prismatic Secret Rare
 limit_regulation:
   tcg: Not yet released
   ocg: Not yet released
