--- a/data/cards/87774234.yaml
+++ b/data/cards/87774234.yaml
@@ -52,6 +52,10 @@ sets:
     set_name: "Legendary Collection 3: Yugi's World Mega Pack"
     rarities:
     - Common
+  - set_number: MOV-EN003
+    set_name: Yu-Gi-Oh! the Movie VHS and DVD promotional cards
+    rarities:
+    - Common
   de:
   - set_number: MOV-DE003
     set_name: Movie Pack
