--- a/data/cards/88619463.yaml
+++ b/data/cards/88619463.yaml
@@ -56,6 +56,10 @@ sets:
     set_name: "Legendary Collection 3: Yugi's World Mega Pack"
     rarities:
     - Common
+  - set_number: MOV-EN002
+    set_name: Yu-Gi-Oh! the Movie VHS and DVD promotional cards
+    rarities:
+    - Common
   de:
   - set_number: MOV-DE002
     set_name: Movie Pack
