--- a/data/rush/16897.yaml
+++ b/data/rush/16897.yaml
@@ -1,6 +1,6 @@
 konami_id: 16897
 name:
-  en: Imaginary Ark Tower
+  en: Imaginary Arc Tower
   de:
   es:
   fr:
@@ -43,10 +43,10 @@ effect:
 card_type: Spell
 property: Field
 series:
-- Imaginary
+- Metarion
 images:
 - index: 1
-  image: ImaginaryArkTower-RDEXT1-JP-C.png
+  image: ImaginaryArcTower-RDEXT1-JP-C.png
 sets:
   ja:
   - set_number: RD/EXT1-JP012
