--- a/data/rush/16886.yaml
+++ b/data/rush/16886.yaml
@@ -1,6 +1,6 @@
 konami_id: 16886
 name:
-  en: Metallion Asurastar
+  en: Metarion Ashurastar
   de:
   es:
   fr:
@@ -64,10 +64,10 @@ materials:
   zh-TW:
   zh-CN:
 series:
-- Imaginary
+- Metarion
 images:
 - index: 1
-  image: MetallionAsurastar-RDEXT1-JP-UR.png
+  image: MetarionAshurastar-RDEXT1-JP-UR.png
 sets:
   ja:
   - set_number: RD/EXT1-JP001
