--- a/data/rush/16887.yaml
+++ b/data/rush/16887.yaml
@@ -1,6 +1,6 @@
 konami_id: 16887
 name:
-  en: Metallion Vritrastar
+  en: Metarion Vritrastar
   de:
   es:
   fr:
@@ -64,10 +64,10 @@ materials:
   zh-TW:
   zh-CN:
 series:
-- Imaginary
+- Metarion
 images:
 - index: 1
-  image: MetallionVritrastar-RDEXT1-JP-UR.png
+  image: MetarionVritrastar-RDEXT1-JP-UR.png
 sets:
   ja:
   - set_number: RD/EXT1-JP002
