--- a/data/rush/16888.yaml
+++ b/data/rush/16888.yaml
@@ -1,6 +1,6 @@
 konami_id: 16888
 name:
-  en: Metallion Eraclestar
+  en: Metarion Eraclestar
   de:
   es:
   fr:
@@ -64,10 +64,10 @@ materials:
   zh-TW:
   zh-CN:
 series:
-- Imaginary
+- Metarion
 images:
 - index: 1
-  image: MetallionEraclestar-RDEXT1-JP-R.png
+  image: MetarionEraclestar-RDEXT1-JP-R.png
 sets:
   ja:
   - set_number: RD/EXT1-JP003
