--- a/data/rush/16889.yaml
+++ b/data/rush/16889.yaml
@@ -1,6 +1,6 @@
 konami_id: 16889
 name:
-  en: Metallion Ladonstar
+  en: Metarion Ladonstar
   de:
   es:
   fr:
@@ -64,10 +64,10 @@ materials:
   zh-TW:
   zh-CN:
 series:
-- Imaginary
+- Metarion
 images:
 - index: 1
-  image: MetallionLadonstar-RDEXT1-JP-R.png
+  image: MetarionLadonstar-RDEXT1-JP-R.png
 sets:
   ja:
   - set_number: RD/EXT1-JP004
