--- a/data/rush/16896.yaml
+++ b/data/rush/16896.yaml
@@ -1,6 +1,6 @@
 konami_id: 16896
 name:
-  en: Imaginary Ark Turbo
+  en: Imaginary Arc Turbo
   de:
   es:
   fr:
@@ -43,10 +43,10 @@ effect:
 card_type: Spell
 property: Normal
 series:
-- Imaginary
+- Metarion
 images:
 - index: 1
-  image: ImaginaryArkTurbo-RDEXT1-JP-C.png
+  image: ImaginaryArcTurbo-RDEXT1-JP-C.png
 sets:
   ja:
   - set_number: RD/EXT1-JP011
