--- a/data/rush/16898.yaml
+++ b/data/rush/16898.yaml
@@ -1,6 +1,6 @@
 konami_id: 16898
 name:
-  en: Imaginary Ark Turbulence
+  en: Imaginary Arc Turbulence
   de:
   es:
   fr:
@@ -43,10 +43,10 @@ effect:
 card_type: Trap
 property: Normal
 series:
-- Imaginary
+- Metarion
 images:
 - index: 1
-  image: ImaginaryArkTurbulence-RDEXT1-JP-C.png
+  image: ImaginaryArcTurbulence-RDEXT1-JP-C.png
 sets:
   ja:
   - set_number: RD/EXT1-JP013
