--- a/data/rush/16899.yaml
+++ b/data/rush/16899.yaml
@@ -1,6 +1,6 @@
 konami_id: 16899
 name:
-  en: Imaginary Ark Turnback
+  en: Imaginary Arc Turnback
   de:
   es:
   fr:
@@ -43,10 +43,10 @@ effect:
 card_type: Trap
 property: Normal
 series:
-- Imaginary
+- Metarion
 images:
 - index: 1
-  image: ImaginaryArkTurnback-RDEXT1-JP-R.png
+  image: ImaginaryArcTurnback-RDEXT1-JP-R.png
 sets:
   ja:
   - set_number: RD/EXT1-JP014
