--- a/data/rush/16994.yaml
+++ b/data/rush/16994.yaml
@@ -1,6 +1,6 @@
 konami_id: 16994
 name:
-  en: 'Uniform No. 99: Junior Baseball King Dragon, Home Grandra'
+  en: 'Player #99: Homefield Dragon'
   de:
   es:
   fr:
@@ -50,7 +50,7 @@ series:
 - Baseball
 images:
 - index: 1
-  image: UniformNo99JuniorBaseballKingDragonHomeGrandra-RDKP07-JP-SR.png
+  image: Player99HomefieldDragon-RDKP07-JP-SR.png
 sets:
   ja:
   - set_number: RD/KP07-JP027
