--- a/data/rush/17315.yaml
+++ b/data/rush/17315.yaml
@@ -1,6 +1,6 @@
 konami_id: 17315
 name:
-  en: Metallion King Cobrastar
+  en: Metarion King Cobrastar
   de:
   es:
   fr:
@@ -64,10 +64,10 @@ materials:
   zh-TW:
   zh-CN:
 series:
-- Imaginary
+- Metarion
 images:
 - index: 1
-  image: MetallionKingCobrastar-RDKP08-JP-R.png
+  image: MetarionKingCobrastar-RDKP08-JP-R.png
 sets:
   ja:
   - set_number: RD/KP08-JP039
