--- a/data/cards/02295440.yaml
+++ b/data/cards/02295440.yaml
@@ -327,6 +327,11 @@ sets:
     set_name: 'Structure Deck: Sacred Beasts of Chaos'
     rarities:
     - Common
+  - set_number: DBAD-KR040
+    set_name: 'Deck Build Pack: Amazing Defenders'
+    rarities:
+    - Common
+    - Normal Parallel Rare
   zh-TW:
   - set_number: SD25-TC030
     set_name: "Structure Deck: The Blue-Eyed Dragon's Thundering Descent"
