--- a/data/cards/56824871.yaml
+++ b/data/cards/56824871.yaml
@@ -92,6 +92,11 @@ sets:
     - Normal Parallel Rare
     - Ultra Rare
     - Secret Rare
+  - set_number: DBAD-KR038
+    set_name: 'Deck Build Pack: Amazing Defenders'
+    rarities:
+    - Common
+    - Normal Parallel Rare
   zh-CN:
   - set_number: MGP5-SC179
     set_name: Mega Pack 05
