--- a/data/cards/37478723.yaml
+++ b/data/cards/37478723.yaml
@@ -10,7 +10,7 @@ name:
   ja: 『<ruby>焔<rt>えん</rt></ruby><ruby>聖<rt>せい</rt></ruby><ruby>剣<rt>けん</rt></ruby>－デュランダル』
   ja_romaji: '"Enseiken - Dyurandaru"'
   ko: 『불꽃성검－듀란달』
-  ko_rr: '"Pulkkotseonggeom - Dyurandal"'
+  ko_rr: '"Bulkkotseonggeom - Dyurandal"'
   zh-TW:
   zh-CN: 『焰圣剑-杜兰达尔』
 text:
@@ -103,6 +103,11 @@ sets:
     set_name: Rise of the Duelist
     rarities:
     - Rare
+  - set_number: DBAD-KR042
+    set_name: 'Deck Build Pack: Amazing Defenders'
+    rarities:
+    - Common
+    - Normal Parallel Rare
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
