--- a/data/cards/41927278.yaml
+++ b/data/cards/41927278.yaml
@@ -79,6 +79,11 @@ sets:
     set_name: Ignition Assault
     rarities:
     - Normal Rare
+  - set_number: DBAD-KR043
+    set_name: 'Deck Build Pack: Amazing Defenders'
+    rarities:
+    - Common
+    - Normal Parallel Rare
   zh-CN:
   - set_number: MGP4-SC093
     set_name: Mega Pack 04
