--- a/data/cards/96399967.yaml
+++ b/data/cards/96399967.yaml
@@ -107,6 +107,11 @@ sets:
     set_name: Dawn of Majesty
     rarities:
     - Rare
+  - set_number: DBAD-KR037
+    set_name: 'Deck Build Pack: Amazing Defenders'
+    rarities:
+    - Common
+    - Normal Parallel Rare
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
