--- a/data/rush/16774.yaml
+++ b/data/rush/16774.yaml
@@ -1,6 +1,6 @@
 konami_id: 16774
 name:
-  en: Sportsdragon Rock Closer
+  en: Sportsdragon Closer
   de:
   es:
   fr:
@@ -50,7 +50,7 @@ series:
 - Sportsdragon
 images:
 - index: 1
-  image: SportsdragonRockCloser-RDSBD2-JP-C.png
+  image: SportsdragonCloser-RDSBD2-JP-C.png
 sets:
   ja:
   - set_number: RD/SBD2-JP003
