--- a/data/rush/17292.yaml
+++ b/data/rush/17292.yaml
@@ -1,6 +1,6 @@
 konami_id: 17292
 name:
-  en: 'Captain Uniform No. 39: Junior Baseball King, Home Plate'
+  en: 'Captain #39: Home Plate Pinch Hitter'
   de:
   es:
   fr:
@@ -50,7 +50,7 @@ series:
 - Baseball
 images:
 - index: 1
-  image: CaptainUniformNo39JuniorBaseballKingHomePlate-RDKP08-JP-SR.png
+  image: Captain39HomePlatePinchHitter-RDKP08-JP-SR.png
 sets:
   ja:
   - set_number: RD/KP08-JP016
