--- a/rush.yaml
+++ b/rush.yaml
@@ -40418,7 +40418,7 @@ yugipedia_page_id: 824707
 ---
 konami_id: 16774
 name:
-  en: Sportsdragon Rock Closer
+  en: Sportsdragon Closer
   de:
   es:
   fr:
@@ -40468,7 +40468,7 @@ series:
 - Sportsdragon
 images:
 - index: 1
-  image: SportsdragonRockCloser-RDSBD2-JP-C.png
+  image: SportsdragonCloser-RDSBD2-JP-C.png
 sets:
   ja:
   - set_number: RD/SBD2-JP003
@@ -54083,7 +54083,7 @@ yugipedia_page_id: 845042
 ---
 konami_id: 17292
 name:
-  en: 'Captain Uniform No. 39: Junior Baseball King, Home Plate'
+  en: 'Captain #39: Home Plate Pinch Hitter'
   de:
   es:
   fr:
@@ -54133,7 +54133,7 @@ series:
 - Baseball
 images:
 - index: 1
-  image: CaptainUniformNo39JuniorBaseballKingHomePlate-RDKP08-JP-SR.png
+  image: Captain39HomePlatePinchHitter-RDKP08-JP-SR.png
 sets:
   ja:
   - set_number: RD/KP08-JP016
@@ -69861,7 +69861,7 @@ yugipedia_page_id: 885283
 ---
 konami_id: 17863
 name:
-  en: Ichthyosteguard
+  en: Ichtyosterguard
   de:
   es:
   fr:
@@ -69895,7 +69895,7 @@ atk: 0
 def: 1500
 images:
 - index: 1
-  image: Ichthyosteguard-RDKP10-JP-R.png
+  image: Ichtyosterguard-RDKP10-JP-R.png
 sets:
   ja:
   - set_number: RD/KP10-JP015
